@@ -28,6 +28,7 @@ import com.liferay.object.service.ObjectDefinitionLocalService;
 import com.liferay.object.service.ObjectEntryLocalService;
 import com.liferay.object.service.ObjectFieldLocalService;
 import com.liferay.object.service.ObjectRelationshipLocalService;
+import com.liferay.object.test.util.ObjectActionTestUtil;
 import com.liferay.object.test.util.ObjectDefinitionTestUtil;
 import com.liferay.object.test.util.ObjectRelationshipTestUtil;
 import com.liferay.object.test.util.TreeTestUtil;
@@ -36,7 +37,6 @@ import com.liferay.object.tree.Node;
 import com.liferay.object.tree.ObjectDefinitionTreeFactory;
 import com.liferay.object.tree.Tree;
 import com.liferay.petra.function.UnsafeBiConsumer;
-import com.liferay.petra.string.StringBundler;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.dao.orm.EntityCache;
 import com.liferay.portal.kernel.dao.orm.QueryUtil;
@@ -46,11 +46,9 @@ import com.liferay.portal.kernel.model.Role;
 import com.liferay.portal.kernel.model.WorkflowDefinitionLink;
 import com.liferay.portal.kernel.model.role.RoleConstants;
 import com.liferay.portal.kernel.security.permission.ActionKeys;
-import com.liferay.portal.kernel.security.permission.ResourceActions;
 import com.liferay.portal.kernel.service.ResourcePermissionLocalService;
 import com.liferay.portal.kernel.service.WorkflowDefinitionLinkLocalService;
 import com.liferay.portal.kernel.test.AssertUtils;
-import com.liferay.portal.kernel.test.ReflectionTestUtil;
 import com.liferay.portal.kernel.test.rule.AggregateTestRule;
 import com.liferay.portal.kernel.test.rule.DataGuard;
 import com.liferay.portal.kernel.test.util.RandomTestUtil;
@@ -58,7 +56,7 @@ import com.liferay.portal.kernel.test.util.RoleTestUtil;
 import com.liferay.portal.kernel.test.util.ServiceContextTestUtil;
 import com.liferay.portal.kernel.test.util.TestPropsValues;
 import com.liferay.portal.kernel.util.Constants;
-import com.liferay.portal.kernel.util.HashMapBuilder;
+import com.liferay.portal.kernel.util.GetterUtil;
 import com.liferay.portal.kernel.util.LinkedHashMapBuilder;
 import com.liferay.portal.kernel.util.ListUtil;
 import com.liferay.portal.kernel.util.LocaleUtil;
@@ -76,14 +74,10 @@ import com.liferay.portal.vulcan.util.LocalizedMapUtil;
 
 import java.io.Serializable;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
-
-import org.hamcrest.CoreMatchers;
 
 import org.junit.After;
 import org.junit.Assert;
@@ -112,6 +106,54 @@ public class ObjectDefinitionTreeUtilTest {
 	public void setUp() throws Exception {
 		_objectDefinitionTreeFactory = new ObjectDefinitionTreeFactory(
 			_objectDefinitionLocalService, _objectRelationshipLocalService);
+
+		_objectDefinitionA = _addAndPublishCustomObjectDefinition();
+		_objectDefinitionAA = _addAndPublishCustomObjectDefinition();
+
+		_objectRelationshipA_AA =
+			ObjectRelationshipTestUtil.addObjectRelationship(
+				_objectRelationshipLocalService, _objectDefinitionA,
+				_objectDefinitionAA);
+
+		_objectRelationshipA_AAObjectField2 =
+			_objectFieldLocalService.fetchObjectField(
+				_objectRelationshipA_AA.getObjectFieldId2());
+
+		_objectDefinitionAB = _addAndPublishCustomObjectDefinition();
+
+		_objectRelationshipA_AB =
+			ObjectRelationshipTestUtil.addObjectRelationship(
+				_objectRelationshipLocalService, _objectDefinitionA,
+				_objectDefinitionAB);
+
+		_objectDefinitionAAA = _addAndPublishCustomObjectDefinition();
+
+		_objectRelationshipAA_AAA =
+			ObjectRelationshipTestUtil.addObjectRelationship(
+				_objectRelationshipLocalService, _objectDefinitionAA,
+				_objectDefinitionAAA);
+
+		_objectRelationshipAA_AAAObjectField2 =
+			_objectFieldLocalService.fetchObjectField(
+				_objectRelationshipAA_AAA.getObjectFieldId2());
+
+		_objectDefinitionAAAA = _addAndPublishCustomObjectDefinition();
+
+		_objectRelationshipAAA_AAAA =
+			ObjectRelationshipTestUtil.addObjectRelationship(
+				_objectRelationshipLocalService, _objectDefinitionAAA,
+				_objectDefinitionAAAA);
+
+		_objectDefinitionB = _addAndPublishCustomObjectDefinition();
+
+		_objectRelationshipB_AA =
+			ObjectRelationshipTestUtil.addObjectRelationship(
+				_objectRelationshipLocalService, _objectDefinitionB,
+				_objectDefinitionAA);
+
+		_objectRelationshipB_AAObjectField2 =
+			_objectFieldLocalService.fetchObjectField(
+				_objectRelationshipB_AA.getObjectFieldId2());
 	}
 
 	@After
@@ -131,9 +173,10 @@ public class ObjectDefinitionTreeUtilTest {
 		ObjectDefinition objectDefinitionAAA =
 			_addAndPublishCustomObjectDefinition("AAA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionAA.getObjectDefinitionId(),
-			objectDefinitionAAA.getObjectDefinitionId());
+			objectDefinitionAAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		_testBindObjectDefinitions(
 			objectDefinitionAAA,
@@ -157,9 +200,9 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(2, "C_AA");
-		_asserScreenNavigationCategories(1, "C_AAA");
-		_asserScreenNavigationCategories(0, "C_AAAA");
+		_assertScreenNavigationCategories(2, "C_AA");
+		_assertScreenNavigationCategories(1, "C_AAA");
+		_assertScreenNavigationCategories(0, "C_AAAA");
 
 		// Bind a draft object definition as a parent node in a published
 		// object definition tree
@@ -186,9 +229,9 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(0, "C_A");
-		_asserScreenNavigationCategories(2, "C_AA");
-		_asserScreenNavigationCategories(1, "C_AAA");
+		_assertScreenNavigationCategories(0, "C_A");
+		_assertScreenNavigationCategories(2, "C_AA");
+		_assertScreenNavigationCategories(1, "C_AAA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -217,8 +260,8 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(0, "C_A");
-		_asserScreenNavigationCategories(1, "C_AA");
+		_assertScreenNavigationCategories(0, "C_A");
+		_assertScreenNavigationCategories(1, "C_AA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService, new String[] {"C_A", "C_AA"},
@@ -253,19 +296,8 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(0, "C_A");
-		_asserScreenNavigationCategories(1, "C_AA");
-
-		long objectDefinitionId = objectDefinitionA.getObjectDefinitionId();
-
-		AssertUtils.assertFailure(
-			ObjectRelationshipEdgeException.class,
-			StringBundler.concat(
-				"There must be no unrelated object entries when both object ",
-				"definitions are published so that the object relationship ",
-				"can be an edge to a root context"),
-			() -> _objectDefinitionLocalService.publishCustomObjectDefinition(
-				TestPropsValues.getUserId(), objectDefinitionId));
+		_assertScreenNavigationCategories(0, "C_A");
+		_assertScreenNavigationCategories(1, "C_AA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService, new String[] {"C_A", "C_AA"},
@@ -279,17 +311,19 @@ public class ObjectDefinitionTreeUtilTest {
 		objectDefinitionAA = ObjectDefinitionTestUtil.addCustomObjectDefinition(
 			"AA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionA.getObjectDefinitionId(),
-			objectDefinitionAA.getObjectDefinitionId());
+			objectDefinitionAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		objectDefinitionAAA = _addAndPublishCustomObjectDefinition("AAA");
 		ObjectDefinition objectDefinitionAAAA =
 			_addAndPublishCustomObjectDefinition("AAAA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionAAA.getObjectDefinitionId(),
-			objectDefinitionAAAA.getObjectDefinitionId());
+			objectDefinitionAAAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		_testBindObjectDefinitions(
 			objectDefinitionAA, objectDefinitionAAA,
@@ -314,10 +348,10 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(0, "C_A");
-		_asserScreenNavigationCategories(0, "C_AA");
-		_asserScreenNavigationCategories(2, "C_AAA");
-		_asserScreenNavigationCategories(1, "C_AAAA");
+		_assertScreenNavigationCategories(0, "C_A");
+		_assertScreenNavigationCategories(0, "C_AA");
+		_assertScreenNavigationCategories(2, "C_AAA");
+		_assertScreenNavigationCategories(1, "C_AAAA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -331,9 +365,10 @@ public class ObjectDefinitionTreeUtilTest {
 		objectDefinitionAA = ObjectDefinitionTestUtil.addCustomObjectDefinition(
 			"AA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionA.getObjectDefinitionId(),
-			objectDefinitionAA.getObjectDefinitionId());
+			objectDefinitionAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		_testBindObjectDefinitions(
 			objectDefinitionAA, _addAndPublishCustomObjectDefinition("AAA"),
@@ -356,9 +391,9 @@ public class ObjectDefinitionTreeUtilTest {
 					_objectDefinitionLocalService);
 			});
 
-		_asserScreenNavigationCategories(0, "C_A");
-		_asserScreenNavigationCategories(0, "C_AA");
-		_asserScreenNavigationCategories(1, "C_AAA");
+		_assertScreenNavigationCategories(0, "C_A");
+		_assertScreenNavigationCategories(0, "C_AA");
+		_assertScreenNavigationCategories(1, "C_AAA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -438,18 +473,20 @@ public class ObjectDefinitionTreeUtilTest {
 		objectDefinitionAA = ObjectDefinitionTestUtil.addCustomObjectDefinition(
 			"AA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionA.getObjectDefinitionId(),
-			objectDefinitionAA.getObjectDefinitionId());
+			objectDefinitionAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		objectDefinitionAAA =
 			ObjectDefinitionTestUtil.addCustomObjectDefinition("AAA");
 		ObjectDefinition objectDefinitionAAAA =
 			ObjectDefinitionTestUtil.addCustomObjectDefinition("AAAA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionAAA.getObjectDefinitionId(),
-			objectDefinitionAAAA.getObjectDefinitionId());
+			objectDefinitionAAAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		_testBindObjectDefinitions(
 			objectDefinitionAA, objectDefinitionAAA,
@@ -586,9 +623,10 @@ public class ObjectDefinitionTreeUtilTest {
 			ObjectRelationshipEdgeException.class,
 			"The object relationship cannot be an edge in the root context " +
 				"because it would exceed the tree's maximum height",
-			() -> _bindObjectDefinitions(
+			() -> TreeTestUtil.bind(
 				objectDefinitionAAAAA.getObjectDefinitionId(),
-				objectDefinitionAAAAAA.getObjectDefinitionId()));
+				objectDefinitionAAAAAA.getObjectDefinitionId(),
+				_objectRelationshipLocalService));
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -634,9 +672,10 @@ public class ObjectDefinitionTreeUtilTest {
 			ObjectRelationshipEdgeException.class,
 			"The object relationship cannot be an edge in the root context " +
 				"because it would exceed the tree's maximum height",
-			() -> _bindObjectDefinitions(
+			() -> TreeTestUtil.bind(
 				objectDefinitionAAA.getObjectDefinitionId(),
-				objectDefinitionAAAA.getObjectDefinitionId()));
+				objectDefinitionAAAA.getObjectDefinitionId(),
+				_objectRelationshipLocalService));
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -732,183 +771,55 @@ public class ObjectDefinitionTreeUtilTest {
 
 	@Test
 	public void testBindObjectDefinitionsWithObjectEntries() throws Exception {
-		ObjectDefinition objectDefinitionAA =
-			_addAndPublishCustomObjectDefinition("AA");
-		ObjectDefinition objectDefinitionAAA =
-			_addAndPublishCustomObjectDefinition("AAA");
+		ObjectEntry objectEntryA1 = ObjectEntryTestUtil.addObjectEntry(
+			0, _objectDefinitionA.getObjectDefinitionId(), Map.of());
 
-		ObjectRelationship objectRelationship1 =
-			_objectRelationshipLocalService.addObjectRelationship(
-				StringUtil.randomId(), TestPropsValues.getUserId(),
-				objectDefinitionAA.getObjectDefinitionId(),
-				objectDefinitionAAA.getObjectDefinitionId(), 0,
-				ObjectRelationshipConstants.DELETION_TYPE_PREVENT, false,
-				LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-				StringUtil.randomId(), false,
-				ObjectRelationshipConstants.TYPE_ONE_TO_MANY, null);
+		ObjectEntry objectEntryAA1 = ObjectEntryTestUtil.addObjectEntry(
+			0, _objectDefinitionAA.getObjectDefinitionId(),
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA1.getObjectEntryId()));
 
-		ObjectEntry objectDefinitionAAObjectEntry1 =
-			ObjectEntryTestUtil.addObjectEntry(
-				0, objectDefinitionAA.getObjectDefinitionId(),
-				Collections.emptyMap());
-		ObjectEntry objectDefinitionAAAObjectEntry1 =
-			ObjectEntryTestUtil.addObjectEntry(
-				0, objectDefinitionAAA.getObjectDefinitionId(),
-				Collections.emptyMap());
-
-		AssertUtils.assertFailure(
-			ObjectRelationshipEdgeException.class,
-			StringBundler.concat(
-				"There must be no unrelated object entries when both object ",
-				"definitions are published so that the object relationship ",
-				"can be an edge to a root context"),
-			() -> TreeTestUtil.bind(
-				_objectRelationshipLocalService, List.of(objectRelationship1)));
-
-		ObjectField objectField1 = _objectFieldLocalService.getObjectField(
-			objectRelationship1.getObjectFieldId2());
-
-		objectDefinitionAAAObjectEntry1 =
-			_objectEntryLocalService.updateObjectEntry(
-				objectDefinitionAAAObjectEntry1.getUserId(),
-				objectDefinitionAAAObjectEntry1.getObjectEntryId(),
-				Collections.singletonMap(
-					objectField1.getName(),
-					objectDefinitionAAObjectEntry1.getObjectEntryId()),
-				ServiceContextTestUtil.getServiceContext());
-
-		Assert.assertEquals(
-			0, objectDefinitionAAObjectEntry1.getRootObjectEntryId());
-		Assert.assertEquals(
-			0, objectDefinitionAAAObjectEntry1.getRootObjectEntryId());
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, 0L
+			).put(
+				objectEntryAA1, 0L
+			).build());
 
 		TreeTestUtil.bind(
-			_objectRelationshipLocalService, List.of(objectRelationship1));
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
 
-		objectDefinitionAAObjectEntry1 =
-			_objectEntryLocalService.getObjectEntry(
-				objectDefinitionAAObjectEntry1.getObjectEntryId());
-		objectDefinitionAAAObjectEntry1 =
-			_objectEntryLocalService.getObjectEntry(
-				objectDefinitionAAAObjectEntry1.getObjectEntryId());
-
-		long expectedRootObjectEntryId =
-			objectDefinitionAAObjectEntry1.getRootObjectEntryId();
-
-		Assert.assertEquals(
-			expectedRootObjectEntryId,
-			objectDefinitionAAObjectEntry1.getRootObjectEntryId());
-		Assert.assertEquals(
-			expectedRootObjectEntryId,
-			objectDefinitionAAAObjectEntry1.getRootObjectEntryId());
-
-		ObjectDefinition objectDefinitionA =
-			_addAndPublishCustomObjectDefinition("A");
-
-		ObjectRelationship objectRelationship2 =
-			_objectRelationshipLocalService.addObjectRelationship(
-				StringUtil.randomId(), TestPropsValues.getUserId(),
-				objectDefinitionA.getObjectDefinitionId(),
-				objectDefinitionAA.getObjectDefinitionId(), 0,
-				ObjectRelationshipConstants.DELETION_TYPE_PREVENT, false,
-				LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-				StringUtil.randomId(), false,
-				ObjectRelationshipConstants.TYPE_ONE_TO_MANY, null);
-
-		ObjectField objectField2 = _objectFieldLocalService.getObjectField(
-			objectRelationship2.getObjectFieldId2());
-
-		ObjectEntry objectDefinitionAObjectEntry1 =
-			ObjectEntryTestUtil.addObjectEntry(
-				0, objectDefinitionA.getObjectDefinitionId(),
-				Collections.emptyMap());
-
-		_objectEntryLocalService.updateObjectEntry(
-			objectDefinitionAAObjectEntry1.getUserId(),
-			objectDefinitionAAObjectEntry1.getObjectEntryId(),
-			Collections.singletonMap(
-				objectField2.getName(),
-				objectDefinitionAObjectEntry1.getObjectEntryId()),
-			ServiceContextTestUtil.getServiceContext());
-
-		Assert.assertEquals(
-			0, objectDefinitionAObjectEntry1.getRootObjectEntryId());
-
-		TreeTestUtil.bind(
-			_objectRelationshipLocalService, List.of(objectRelationship2));
-
-		objectDefinitionAObjectEntry1 = _objectEntryLocalService.getObjectEntry(
-			objectDefinitionAObjectEntry1.getObjectEntryId());
-		objectDefinitionAAObjectEntry1 =
-			_objectEntryLocalService.getObjectEntry(
-				objectDefinitionAAObjectEntry1.getObjectEntryId());
-		objectDefinitionAAAObjectEntry1 =
-			_objectEntryLocalService.getObjectEntry(
-				objectDefinitionAAAObjectEntry1.getObjectEntryId());
-
-		expectedRootObjectEntryId =
-			objectDefinitionAObjectEntry1.getRootObjectEntryId();
-
-		Assert.assertEquals(
-			expectedRootObjectEntryId,
-			objectDefinitionAObjectEntry1.getRootObjectEntryId());
-		Assert.assertEquals(
-			expectedRootObjectEntryId,
-			objectDefinitionAAObjectEntry1.getRootObjectEntryId());
-		Assert.assertEquals(
-			expectedRootObjectEntryId,
-			objectDefinitionAAAObjectEntry1.getRootObjectEntryId());
-
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService,
-			new String[] {
-				objectDefinitionA.getName(), objectDefinitionAA.getName(),
-				objectDefinitionAAA.getName()
-			},
-			_objectEntryLocalService, _objectRelationshipLocalService);
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA1.getObjectEntryId()
+			).build());
 	}
 
 	@Test
 	public void testBindObjectDefinitionsWithOngoingWorkflowInstances()
 		throws Exception {
 
-		ObjectDefinition objectDefinitionA =
-			_addAndPublishCustomObjectDefinition();
-		ObjectDefinition objectDefinitionAA =
-			_addAndPublishCustomObjectDefinition();
-
-		ObjectRelationship objectRelationship =
-			_objectRelationshipLocalService.addObjectRelationship(
-				StringUtil.randomId(), TestPropsValues.getUserId(),
-				objectDefinitionA.getObjectDefinitionId(),
-				objectDefinitionAA.getObjectDefinitionId(), 0,
-				ObjectRelationshipConstants.DELETION_TYPE_PREVENT, false,
-				LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-				StringUtil.randomId(), false,
-				ObjectRelationshipConstants.TYPE_ONE_TO_MANY, null);
-
 		_workflowDefinitionLinkLocalService.updateWorkflowDefinitionLink(
 			TestPropsValues.getUserId(), TestPropsValues.getCompanyId(), 0,
-			objectDefinitionA.getClassName(), 0, 0, "Single Approver", 1);
+			_objectDefinitionA.getClassName(), 0, 0, "Single Approver", 1);
 
 		ObjectEntry objectEntryA1 = ObjectEntryTestUtil.addObjectEntry(
-			0, objectDefinitionA.getObjectDefinitionId(),
-			Collections.emptyMap());
+			0, _objectDefinitionA.getObjectDefinitionId(), Map.of());
 		ObjectEntry objectEntryA2 = ObjectEntryTestUtil.addObjectEntry(
-			0, objectDefinitionA.getObjectDefinitionId(),
-			Collections.emptyMap());
+			0, _objectDefinitionA.getObjectDefinitionId(), Map.of());
 
 		_workflowDefinitionLinkLocalService.updateWorkflowDefinitionLink(
 			TestPropsValues.getUserId(), TestPropsValues.getCompanyId(), 0,
-			objectDefinitionAA.getClassName(), 0, 0, "Single Approver", 1);
-
-		ObjectField objectField = _objectFieldLocalService.getObjectField(
-			objectRelationship.getObjectFieldId2());
+			_objectDefinitionAA.getClassName(), 0, 0, "Single Approver", 1);
 
 		ObjectEntry objectEntryAA = ObjectEntryTestUtil.addObjectEntry(
-			0, objectDefinitionAA.getObjectDefinitionId(),
-			Collections.singletonMap(
-				objectField.getName(), objectEntryA1.getObjectEntryId()));
+			0, _objectDefinitionAA.getObjectDefinitionId(),
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA1.getObjectEntryId()));
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
@@ -916,13 +827,15 @@ public class ObjectDefinitionTreeUtilTest {
 				"These ongoing workflow instances must be completed to " +
 					"enable inheritance: \"%s\" (\"%s\" object entries) and " +
 						"\"%s\" (\"%s\" object entries)",
-				objectDefinitionA.getLabel(LocaleUtil.US), 2,
-				objectDefinitionAA.getLabel(LocaleUtil.US), 1),
+				_objectDefinitionA.getLabel(LocaleUtil.US), 2,
+				_objectDefinitionAA.getLabel(LocaleUtil.US), 1),
 			() -> TreeTestUtil.bind(
-				_objectRelationshipLocalService, List.of(objectRelationship)));
+				_objectRelationshipLocalService,
+				List.of(_objectRelationshipA_AA)));
 
 		_completeWorkflowTask(
-			objectDefinitionA.getClassName(), objectEntryA1.getObjectEntryId());
+			_objectDefinitionA.getClassName(),
+			objectEntryA1.getObjectEntryId());
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
@@ -930,29 +843,32 @@ public class ObjectDefinitionTreeUtilTest {
 				"These ongoing workflow instances must be completed to " +
 					"enable inheritance: \"%s\" (\"%s\" object entries) and " +
 						"\"%s\" (\"%s\" object entries)",
-				objectDefinitionA.getLabel(LocaleUtil.US), 1,
-				objectDefinitionAA.getLabel(LocaleUtil.US), 1),
+				_objectDefinitionA.getLabel(LocaleUtil.US), 1,
+				_objectDefinitionAA.getLabel(LocaleUtil.US), 1),
 			() -> TreeTestUtil.bind(
-				_objectRelationshipLocalService, List.of(objectRelationship)));
+				_objectRelationshipLocalService,
+				List.of(_objectRelationshipA_AA)));
 
 		_completeWorkflowTask(
-			objectDefinitionA.getClassName(), objectEntryA2.getObjectEntryId());
+			_objectDefinitionA.getClassName(),
+			objectEntryA2.getObjectEntryId());
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
 			String.format(
 				"These ongoing workflow instances must be completed to " +
 					"enable inheritance: \"%s\" (\"%s\" object entries)",
-				objectDefinitionAA.getLabel(LocaleUtil.US), 1),
+				_objectDefinitionAA.getLabel(LocaleUtil.US), 1),
 			() -> TreeTestUtil.bind(
-				_objectRelationshipLocalService, List.of(objectRelationship)));
+				_objectRelationshipLocalService,
+				List.of(_objectRelationshipA_AA)));
 
 		_completeWorkflowTask(
-			objectDefinitionAA.getClassName(),
+			_objectDefinitionAA.getClassName(),
 			objectEntryAA.getObjectEntryId());
 
 		TreeTestUtil.bind(
-			_objectRelationshipLocalService, List.of(objectRelationship));
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
 
 		objectEntryAA = _objectEntryLocalService.getObjectEntry(
 			objectEntryAA.getObjectEntryId());
@@ -960,13 +876,6 @@ public class ObjectDefinitionTreeUtilTest {
 		Assert.assertEquals(
 			objectEntryA1.getObjectEntryId(),
 			objectEntryAA.getRootObjectEntryId());
-
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService,
-			new String[] {
-				objectDefinitionA.getName(), objectDefinitionAA.getName()
-			},
-			_objectEntryLocalService, _objectRelationshipLocalService);
 	}
 
 	@Test
@@ -980,9 +889,10 @@ public class ObjectDefinitionTreeUtilTest {
 		ObjectDefinition objectDefinitionAAA =
 			_addAndPublishCustomObjectDefinition("AAA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionAA.getObjectDefinitionId(),
-			objectDefinitionAAA.getObjectDefinitionId());
+			objectDefinitionAAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		ObjectDefinition objectDefinitionAAAA =
 			_addAndPublishCustomObjectDefinition("AAAA");
@@ -1002,9 +912,9 @@ public class ObjectDefinitionTreeUtilTest {
 						objectDefinition1.getRootObjectDefinitionId()),
 					_objectDefinitionLocalService));
 
-		_asserScreenNavigationCategories(2, "C_AA");
-		_asserScreenNavigationCategories(2, "C_AAA");
-		_asserScreenNavigationCategories(1, "C_AAAA");
+		_assertScreenNavigationCategories(2, "C_AA");
+		_assertScreenNavigationCategories(2, "C_AAA");
+		_assertScreenNavigationCategories(1, "C_AAAA");
 
 		// Bind a published object definition as a parent node in a published
 		// object definition tree
@@ -1026,10 +936,10 @@ public class ObjectDefinitionTreeUtilTest {
 						objectDefinition1.getObjectDefinitionId()),
 					_objectDefinitionLocalService));
 
-		_asserScreenNavigationCategories(2, "C_A");
-		_asserScreenNavigationCategories(2, "C_AA");
-		_asserScreenNavigationCategories(2, "C_AAA");
-		_asserScreenNavigationCategories(1, "C_AAAA");
+		_assertScreenNavigationCategories(2, "C_A");
+		_assertScreenNavigationCategories(2, "C_AA");
+		_assertScreenNavigationCategories(2, "C_AAA");
+		_assertScreenNavigationCategories(1, "C_AAAA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -1042,16 +952,18 @@ public class ObjectDefinitionTreeUtilTest {
 			_addAndPublishCustomObjectDefinition("A");
 		objectDefinitionAA = _addAndPublishCustomObjectDefinition("AA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionA.getObjectDefinitionId(),
-			objectDefinitionAA.getObjectDefinitionId());
+			objectDefinitionAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		objectDefinitionAAA = _addAndPublishCustomObjectDefinition("AAA");
 		objectDefinitionAAAA = _addAndPublishCustomObjectDefinition("AAAA");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionAAA.getObjectDefinitionId(),
-			objectDefinitionAAAA.getObjectDefinitionId());
+			objectDefinitionAAAA.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		_testBindObjectDefinitions(
 			objectDefinitionAA, objectDefinitionAAA,
@@ -1070,10 +982,10 @@ public class ObjectDefinitionTreeUtilTest {
 						objectDefinition1.getRootObjectDefinitionId()),
 					_objectDefinitionLocalService));
 
-		_asserScreenNavigationCategories(2, "C_A");
-		_asserScreenNavigationCategories(2, "C_AA");
-		_asserScreenNavigationCategories(2, "C_AAA");
-		_asserScreenNavigationCategories(1, "C_AAAA");
+		_assertScreenNavigationCategories(2, "C_A");
+		_assertScreenNavigationCategories(2, "C_AA");
+		_assertScreenNavigationCategories(2, "C_AAA");
+		_assertScreenNavigationCategories(1, "C_AAAA");
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -1100,8 +1012,8 @@ public class ObjectDefinitionTreeUtilTest {
 						objectDefinition1.getObjectDefinitionId()),
 					_objectDefinitionLocalService));
 
-		_asserScreenNavigationCategories(2, "C_B");
-		_asserScreenNavigationCategories(1, "C_BB");
+		_assertScreenNavigationCategories(2, "C_B");
+		_assertScreenNavigationCategories(1, "C_BB");
 
 		// Object definitions must have the same scope to enable inheritance
 
@@ -1125,9 +1037,10 @@ public class ObjectDefinitionTreeUtilTest {
 						"scope",
 				objectDefinitionB.getShortName(),
 				siteObjectDefinition.getShortName()),
-			() -> _bindObjectDefinitions(
+			() -> TreeTestUtil.bind(
 				objectDefinitionB.getObjectDefinitionId(),
-				siteObjectDefinition.getObjectDefinitionId()));
+				siteObjectDefinition.getObjectDefinitionId(),
+				_objectRelationshipLocalService));
 
 		// Unable to bind the object definitions because the object relationship
 		// must not create a circular reference in a root context
@@ -1135,26 +1048,29 @@ public class ObjectDefinitionTreeUtilTest {
 		ObjectDefinition objectDefinitionBBB =
 			_addAndPublishCustomObjectDefinition("BBB");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionBB.getObjectDefinitionId(),
-			objectDefinitionBBB.getObjectDefinitionId());
+			objectDefinitionBBB.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
 			"The object relationship must not create a circular reference in " +
 				"a root context",
-			() -> _bindObjectDefinitions(
+			() -> TreeTestUtil.bind(
 				objectDefinitionBBB.getObjectDefinitionId(),
-				objectDefinitionB.getObjectDefinitionId()));
+				objectDefinitionB.getObjectDefinitionId(),
+				_objectRelationshipLocalService));
 
 		ObjectDefinition objectDefinitionC =
 			_addAndPublishCustomObjectDefinition("C");
 		ObjectDefinition objectDefinitionCC =
 			_addAndPublishCustomObjectDefinition("CC");
 
-		_bindObjectDefinitions(
+		TreeTestUtil.bind(
 			objectDefinitionC.getObjectDefinitionId(),
-			objectDefinitionCC.getObjectDefinitionId());
+			objectDefinitionCC.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -1167,63 +1083,192 @@ public class ObjectDefinitionTreeUtilTest {
 
 	@Test
 	public void testUnbindObjectDefinitions() throws Exception {
-		Tree tree = TreeTestUtil.createObjectDefinitionTree(
-			_objectDefinitionLocalService, _objectRelationshipLocalService,
-			true,
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
 			LinkedHashMapBuilder.put(
-				"A", new String[] {"AA", "AB"}
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
 			).put(
-				"AA", new String[] {"AAA"}
-			).put(
-				"AB", new String[0]
-			).put(
-				"AAA", new String[0]
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
 			).build());
 
-		_unbindObjectDefinitions("AA", tree);
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipA_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
 
-		ObjectDefinition objectDefinitionA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_A");
-
-		TreeTestUtil.assertObjectDefinitionTree(
+		TreeTestUtil.assertRootObjectDefinitionIds(
 			LinkedHashMapBuilder.put(
-				"A", new String[] {"AB"}
+				_objectDefinitionA, new ObjectDefinition[0]
 			).put(
-				"AB", new String[0]
-			).build(),
-			_objectDefinitionTreeFactory.create(
-				objectDefinitionA.getObjectDefinitionId()),
-			_objectDefinitionLocalService);
+				_objectDefinitionAA, new ObjectDefinition[0]
+			).build());
+	}
 
-		ObjectDefinition objectDefinitionAA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_AA");
+	@Test
+	public void testUnbindObjectDefinitionsWithDescendantNode()
+		throws Exception {
 
-		TreeTestUtil.assertObjectDefinitionTree(
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipAA_AAA));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
 			LinkedHashMapBuilder.put(
-				"AA", new String[] {"AAA"}
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
 			).put(
-				"AAA", new String[0]
-			).build(),
-			_objectDefinitionTreeFactory.create(
-				objectDefinitionAA.getObjectDefinitionId()),
-			_objectDefinitionLocalService);
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionA}
+			).build());
 
-		_unbindObjectDefinitions("AB", tree);
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipA_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
 
-		_assertRootObjectDefinitionIdIsZero("A");
-		_assertRootObjectDefinitionIdIsZero("AB");
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[0]
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionAA}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionAA}
+			).build());
+	}
 
-		_unbindObjectDefinitions("AAA", tree);
+	@Test
+	public void testUnbindObjectDefinitionsWithDescendantNodeAndGrandParentNodes()
+		throws Exception {
 
-		_assertRootObjectDefinitionIdIsZero("AA");
-		_assertRootObjectDefinitionIdIsZero("AAA");
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(
+				_objectRelationshipA_AA, _objectRelationshipAA_AAA,
+				_objectRelationshipAAA_AAAA, _objectRelationshipB_AA));
 
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService,
-			new String[] {"C_A", "C_AA", "C_AAA", "C_AAB", "C_AB"},
-			_objectEntryLocalService, _objectRelationshipLocalService);
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipAA_AAA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionAAA}
+			).put(
+				_objectDefinitionAAAA,
+				new ObjectDefinition[] {_objectDefinitionAAA}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithDescendantNodeAndParentNodes()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(
+				_objectRelationshipA_AA, _objectRelationshipAA_AAA,
+				_objectRelationshipB_AA));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipB_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[0]
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithGrandParentNodes()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(
+				_objectRelationshipA_AA, _objectRelationshipAA_AAA,
+				_objectRelationshipB_AA));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipAA_AAA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionAAA, new ObjectDefinition[0]
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
 	}
 
 	@Test
@@ -1252,220 +1297,476 @@ public class ObjectDefinitionTreeUtilTest {
 	public void testUnbindObjectDefinitionsWithObjectEntries()
 		throws Exception {
 
-		Tree tree = TreeTestUtil.createObjectDefinitionTree(
-			_objectDefinitionLocalService, _objectRelationshipLocalService,
-			true,
-			LinkedHashMapBuilder.put(
-				"A", new String[] {"AA"}
-			).put(
-				"AA", new String[] {"AAA"}
-			).put(
-				"AAA", new String[0]
-			).build());
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
 
-		ObjectDefinition objectDefinitionA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_A");
-
-		ObjectEntry objectEntryA = _addObjectEntry(
-			objectDefinitionA, Collections.emptyMap());
-
-		Role role = RoleTestUtil.addRole(RoleConstants.TYPE_REGULAR);
-
-		_resourcePermissionLocalService.setResourcePermissions(
-			TestPropsValues.getCompanyId(), objectDefinitionA.getClassName(),
-			ResourceConstants.SCOPE_INDIVIDUAL,
-			String.valueOf(objectEntryA.getObjectEntryId()), role.getRoleId(),
-			new String[] {ActionKeys.UPDATE, ActionKeys.VIEW});
-
-		ObjectDefinition objectDefinitionAA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_AA");
-
-		Node nodeAA = tree.getNode(objectDefinitionAA.getPrimaryKey());
-
-		Edge edgeA_AA = nodeAA.getEdge();
-
-		ObjectRelationship objectRelationshipA_AA =
-			_objectRelationshipLocalService.getObjectRelationship(
-				edgeA_AA.getObjectRelationshipId());
-
-		ObjectField objectField = _objectFieldLocalService.fetchObjectField(
-			objectRelationshipA_AA.getObjectFieldId2());
+		ObjectEntry objectEntryA1 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+		ObjectEntry objectEntryA2 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
 
 		ObjectEntry objectEntryAA1 = _addObjectEntry(
-			objectDefinitionAA,
-			HashMapBuilder.<String, Serializable>put(
-				objectField.getName(), objectEntryA.getObjectEntryId()
-			).build());
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA1.getObjectEntryId()));
 		ObjectEntry objectEntryAA2 = _addObjectEntry(
-			objectDefinitionAA,
-			HashMapBuilder.<String, Serializable>put(
-				objectField.getName(), objectEntryA.getObjectEntryId()
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA2.getObjectEntryId()));
+		ObjectEntry objectEntryAA3 = _addObjectEntry(
+			_objectDefinitionAA, Map.of());
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
 			).build());
 
-		ObjectDefinition objectDefinitionAAA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_AAA");
-
-		Node nodeAAA = tree.getNode(objectDefinitionAAA.getPrimaryKey());
-
-		Edge edgeAA_AAA = nodeAAA.getEdge();
-
-		ObjectRelationship objectRelationshipAA_AAA =
+		TreeTestUtil.unbind(
 			_objectRelationshipLocalService.getObjectRelationship(
-				edgeAA_AAA.getObjectRelationshipId());
+				_objectRelationshipA_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
 
-		objectField = _objectFieldLocalService.fetchObjectField(
-			objectRelationshipAA_AAA.getObjectFieldId2());
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, 0L
+			).put(
+				objectEntryA2, 0L
+			).put(
+				objectEntryAA1, 0L
+			).put(
+				objectEntryAA2, 0L
+			).put(
+				objectEntryAA3, 0L
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithObjectEntriesWithDescendantAndParentNodes()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(
+				_objectRelationshipA_AA, _objectRelationshipAA_AAA,
+				_objectRelationshipB_AA));
+
+		ObjectEntry objectEntryA = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+
+		ObjectEntry objectEntryAA1 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA.getObjectEntryId()));
+
+		ObjectEntry objectEntryB = _addObjectEntry(
+			_objectDefinitionB, Map.of());
+
+		ObjectEntry objectEntryAA2 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipB_AAObjectField2.getName(),
+				objectEntryB.getObjectEntryId()));
+
+		ObjectEntry objectEntryAA3 = _addObjectEntry(
+			_objectDefinitionAA, Map.of());
 
 		ObjectEntry objectEntryAAA1 = _addObjectEntry(
-			objectDefinitionAAA,
-			HashMapBuilder.<String, Serializable>put(
-				objectField.getName(), objectEntryAA1.getObjectEntryId()
-			).build());
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA1.getObjectEntryId()));
 		ObjectEntry objectEntryAAA2 = _addObjectEntry(
-			objectDefinitionAAA,
-			HashMapBuilder.<String, Serializable>put(
-				objectField.getName(), objectEntryAA2.getObjectEntryId()
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA2.getObjectEntryId()));
+		ObjectEntry objectEntryAAA3 = _addObjectEntry(
+			_objectDefinitionAAA, Map.of());
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryB.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAAA2, objectEntryB.getObjectEntryId()
+			).put(
+				objectEntryAAA3, 0L
+			).put(
+				objectEntryB, objectEntryB.getObjectEntryId()
 			).build());
 
-		_unbindObjectDefinitions("AA", tree);
-
-		_entityCache.clearCache();
-
-		_assertRootObjectEntryId(0, objectEntryA.getObjectEntryId());
-		_assertRootObjectEntryId(
-			objectEntryAA1.getObjectEntryId(),
-			objectEntryAA1.getObjectEntryId());
-		_assertRootObjectEntryId(
-			objectEntryAA1.getObjectEntryId(),
-			objectEntryAAA1.getObjectEntryId());
-		_assertRootObjectEntryId(
-			objectEntryAA2.getObjectEntryId(),
-			objectEntryAA2.getObjectEntryId());
-		_assertRootObjectEntryId(
-			objectEntryAA2.getObjectEntryId(),
-			objectEntryAAA2.getObjectEntryId());
-
-		_assertHasResourcePermission(true, objectEntryA, role);
-		_assertHasResourcePermission(true, objectEntryAA1, role);
-		_assertHasResourcePermission(true, objectEntryAA2, role);
-		_assertHasResourcePermission(false, objectEntryAAA1, role);
-		_assertHasResourcePermission(false, objectEntryAAA2, role);
-
-		_unbindObjectDefinitions("AAA", tree);
-
-		_entityCache.clearCache();
-
-		_assertRootObjectEntryId(0, objectEntryAA1.getObjectEntryId());
-		_assertRootObjectEntryId(0, objectEntryAA2.getObjectEntryId());
-		_assertRootObjectEntryId(0, objectEntryAAA1.getObjectEntryId());
-		_assertRootObjectEntryId(0, objectEntryAAA2.getObjectEntryId());
-
-		_assertHasResourcePermission(true, objectEntryAAA1, role);
-		_assertHasResourcePermission(true, objectEntryAAA2, role);
-
-		_objectEntryLocalService.deleteObjectEntry(objectEntryAAA1);
-		_objectEntryLocalService.deleteObjectEntry(objectEntryAAA2);
-
-		_objectEntryLocalService.deleteObjectEntry(objectEntryAA1);
-		_objectEntryLocalService.deleteObjectEntry(objectEntryAA2);
-
-		_objectEntryLocalService.deleteObjectEntry(objectEntryA);
-
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService,
-			new String[] {"C_A", "C_AA", "C_AAA"}, _objectEntryLocalService,
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipB_AA.getObjectRelationshipId()),
 			_objectRelationshipLocalService);
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA2, 0L
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAAA2, 0L
+			).put(
+				objectEntryAAA3, 0L
+			).put(
+				objectEntryB, 0L
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithObjectEntriesWithDescendantNode()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipAA_AAA));
+
+		ObjectEntry objectEntryA1 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+		ObjectEntry objectEntryA2 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+
+		ObjectEntry objectEntryAA1 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA1.getObjectEntryId()));
+		ObjectEntry objectEntryAA2 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA2.getObjectEntryId()));
+		ObjectEntry objectEntryAA3 = _addObjectEntry(
+			_objectDefinitionAA, Map.of());
+
+		ObjectEntry objectEntryAAA1 = _addObjectEntry(
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA1.getObjectEntryId()));
+		ObjectEntry objectEntryAAA2 = _addObjectEntry(
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA2.getObjectEntryId()));
+		ObjectEntry objectEntryAAA3 = _addObjectEntry(
+			_objectDefinitionAAA, Map.of());
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAAA3, 0L
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipA_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, 0L
+			).put(
+				objectEntryA2, 0L
+			).put(
+				objectEntryAA1, objectEntryAA1.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryAA2.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, objectEntryAA1.getObjectEntryId()
+			).put(
+				objectEntryAAA2, objectEntryAA2.getObjectEntryId()
+			).put(
+				objectEntryAAA3, 0L
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithObjectEntriesWithParentNode()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipAA_AAA));
+
+		ObjectEntry objectEntryA1 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+		ObjectEntry objectEntryA2 = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+
+		ObjectEntry objectEntryAA1 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA1.getObjectEntryId()));
+		ObjectEntry objectEntryAA2 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA2.getObjectEntryId()));
+		ObjectEntry objectEntryAA3 = _addObjectEntry(
+			_objectDefinitionAA, Map.of());
+
+		ObjectEntry objectEntryAAA1 = _addObjectEntry(
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA1.getObjectEntryId()));
+		ObjectEntry objectEntryAAA2 = _addObjectEntry(
+			_objectDefinitionAAA,
+			Map.of(
+				_objectRelationshipAA_AAAObjectField2.getName(),
+				objectEntryAA2.getObjectEntryId()));
+		ObjectEntry objectEntryAAA3 = _addObjectEntry(
+			_objectDefinitionAAA, Map.of());
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAAA3, 0L
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipAA_AAA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA1.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryA2.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryAAA1, 0L
+			).put(
+				objectEntryAAA2, 0L
+			).put(
+				objectEntryAAA3, 0L
+			).build());
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithObjectEntriesWithParentNodes()
+		throws Exception {
+
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipB_AA));
+
+		ObjectEntry objectEntryA = _addObjectEntry(
+			_objectDefinitionA, Map.of());
+
+		ObjectEntry objectEntryAA1 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipA_AAObjectField2.getName(),
+				objectEntryA.getObjectEntryId()));
+
+		ObjectEntry objectEntryB = _addObjectEntry(
+			_objectDefinitionB, Map.of());
+
+		ObjectEntry objectEntryAA2 = _addObjectEntry(
+			_objectDefinitionAA,
+			Map.of(
+				_objectRelationshipB_AAObjectField2.getName(),
+				objectEntryB.getObjectEntryId()));
+
+		ObjectEntry objectEntryAA3 = _addObjectEntry(
+			_objectDefinitionAA, Map.of());
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA2, objectEntryB.getObjectEntryId()
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryB, objectEntryB.getObjectEntryId()
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipB_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		_assertRootObjectEntryIds(
+			LinkedHashMapBuilder.put(
+				objectEntryA, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA1, objectEntryA.getObjectEntryId()
+			).put(
+				objectEntryAA2, 0L
+			).put(
+				objectEntryAA3, 0L
+			).put(
+				objectEntryB, 0L
+			).build());
 	}
 
 	@Test
 	public void testUnbindObjectDefinitionsWithOngoingWorkflowInstances()
 		throws Exception {
 
-		Tree objectDefinitionTree = TreeTestUtil.createObjectDefinitionTree(
-			_objectDefinitionLocalService, _objectRelationshipLocalService,
-			true,
-			LinkedHashMapBuilder.put(
-				"A", new String[] {"AA"}
-			).build());
-
-		ObjectDefinition objectDefinitionA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_A");
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
 
 		_workflowDefinitionLinkLocalService.updateWorkflowDefinitionLink(
 			TestPropsValues.getUserId(), TestPropsValues.getCompanyId(), 0,
-			objectDefinitionA.getClassName(), 0, 0, "Single Approver", 1);
+			_objectDefinitionA.getClassName(), 0, 0, "Single Approver", 1);
 
 		Tree objectEntryTree1 = TreeTestUtil.createObjectEntryTree(
 			"1", _objectDefinitionLocalService, _objectEntryLocalService,
 			_objectFieldLocalService, _objectRelationshipLocalService,
-			objectDefinitionA.getObjectDefinitionId());
+			_objectDefinitionA.getObjectDefinitionId());
 		Tree objectEntryTree2 = TreeTestUtil.createObjectEntryTree(
 			"2", _objectDefinitionLocalService, _objectEntryLocalService,
 			_objectFieldLocalService, _objectRelationshipLocalService,
-			objectDefinitionA.getObjectDefinitionId());
+			_objectDefinitionA.getObjectDefinitionId());
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
 			String.format(
 				"These ongoing workflow instances must be completed to " +
 					"disable inheritance: \"%s\" (\"%s\" object entries)",
-				objectDefinitionA.getLabel(LocaleUtil.US), 2),
-			() -> _unbindObjectDefinitions("AA", objectDefinitionTree));
+				_objectDefinitionA.getLabel(LocaleUtil.US), 2),
+			() -> TreeTestUtil.unbind(
+				_objectRelationshipA_AA, _objectRelationshipLocalService));
 
 		Node rootNode1 = objectEntryTree1.getRootNode();
 
 		_completeWorkflowTask(
-			objectDefinitionA.getClassName(), rootNode1.getPrimaryKey());
+			_objectDefinitionA.getClassName(), rootNode1.getPrimaryKey());
 
 		AssertUtils.assertFailure(
 			ObjectRelationshipEdgeException.class,
 			String.format(
 				"These ongoing workflow instances must be completed to " +
 					"disable inheritance: \"%s\" (\"%s\" object entries)",
-				objectDefinitionA.getLabel(LocaleUtil.US), 1),
-			() -> _unbindObjectDefinitions("AA", objectDefinitionTree));
+				_objectDefinitionA.getLabel(LocaleUtil.US), 1),
+			() -> TreeTestUtil.unbind(
+				_objectRelationshipA_AA, _objectRelationshipLocalService));
 
 		Node rootNode2 = objectEntryTree2.getRootNode();
 
 		_completeWorkflowTask(
-			objectDefinitionA.getClassName(), rootNode2.getPrimaryKey());
+			_objectDefinitionA.getClassName(), rootNode2.getPrimaryKey());
 
-		_unbindObjectDefinitions("AA", objectDefinitionTree);
+		TreeTestUtil.unbind(
+			_objectRelationshipA_AA, _objectRelationshipLocalService);
 
-		_assertRootObjectDefinitionIdIsZero("A");
-		_assertRootObjectDefinitionIdIsZero("AA");
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[0]
+			).put(
+				_objectDefinitionAA, new ObjectDefinition[0]
+			).build());
+	}
 
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService, new String[] {"C_A", "C_AA"},
-			_objectEntryLocalService, _objectRelationshipLocalService);
+	@Test
+	public void testUnbindObjectDefinitionsWithParentNodes() throws Exception {
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipB_AA));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA,
+				new ObjectDefinition[] {_objectDefinitionA, _objectDefinitionB}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[] {_objectDefinitionB}
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipB_AA.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionB, new ObjectDefinition[0]
+			).build());
 	}
 
 	@Test
 	public void testUnbindObjectDefinitionsWithResourcePermissions()
 		throws Exception {
 
-		Tree tree = TreeTestUtil.createObjectDefinitionTree(
-			_objectDefinitionLocalService, _objectRelationshipLocalService,
-			true,
-			LinkedHashMapBuilder.put(
-				"A", new String[] {"AA"}
-			).put(
-				"AA", new String[0]
-			).build());
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService, List.of(_objectRelationshipA_AA));
 
 		Role organizationRole = RoleTestUtil.addRole(
 			RoleConstants.TYPE_ORGANIZATION);
 
-		ObjectDefinition objectDefinitionA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_A");
-
 		_resourcePermissionLocalService.setResourcePermissions(
-			TestPropsValues.getCompanyId(), objectDefinitionA.getClassName(),
+			TestPropsValues.getCompanyId(), _objectDefinitionA.getClassName(),
 			ResourceConstants.SCOPE_GROUP_TEMPLATE,
 			String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
 			organizationRole.getRoleId(), new String[] {ActionKeys.UPDATE});
@@ -1473,7 +1774,7 @@ public class ObjectDefinitionTreeUtilTest {
 		Role regularRole = RoleTestUtil.addRole(RoleConstants.TYPE_REGULAR);
 
 		_resourcePermissionLocalService.setResourcePermissions(
-			TestPropsValues.getCompanyId(), objectDefinitionA.getPortletId(),
+			TestPropsValues.getCompanyId(), _objectDefinitionA.getPortletId(),
 			ResourceConstants.SCOPE_COMPANY,
 			String.valueOf(TestPropsValues.getCompanyId()),
 			regularRole.getRoleId(),
@@ -1482,73 +1783,91 @@ public class ObjectDefinitionTreeUtilTest {
 		Role siteRole = RoleTestUtil.addRole(RoleConstants.TYPE_SITE);
 
 		_resourcePermissionLocalService.setResourcePermissions(
-			TestPropsValues.getCompanyId(), objectDefinitionA.getResourceName(),
+			TestPropsValues.getCompanyId(),
+			_objectDefinitionA.getResourceName(),
 			ResourceConstants.SCOPE_GROUP_TEMPLATE,
 			String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
 			siteRole.getRoleId(),
 			new String[] {ObjectActionKeys.ADD_OBJECT_ENTRY});
 
-		ObjectDefinition objectDefinitionAA =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), "C_AA");
-
-		ObjectAction objectAction = _objectActionLocalService.addObjectAction(
-			RandomTestUtil.randomString(), TestPropsValues.getUserId(),
-			objectDefinitionAA.getObjectDefinitionId(), true, null,
-			RandomTestUtil.randomString(),
-			LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-			LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-			RandomTestUtil.randomString(),
+		ObjectAction objectAction = ObjectActionTestUtil.addObjectAction(
 			ObjectActionExecutorConstants.KEY_WEBHOOK,
-			ObjectActionTriggerConstants.KEY_STANDALONE,
+			ObjectActionTriggerConstants.KEY_STANDALONE, _objectDefinitionAA,
 			UnicodePropertiesBuilder.put(
 				"secret", "standalone"
 			).put(
 				"url", "https://standalone.com"
-			).build(),
-			false);
+			).build());
 
 		_resourcePermissionLocalService.setResourcePermissions(
-			TestPropsValues.getCompanyId(), objectDefinitionAA.getClassName(),
+			TestPropsValues.getCompanyId(), _objectDefinitionAA.getClassName(),
 			ResourceConstants.SCOPE_GROUP_TEMPLATE,
 			String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
 			organizationRole.getRoleId(),
 			new String[] {objectAction.getName()});
 
-		_unbindObjectDefinitions("AA", tree);
+		TreeTestUtil.unbind(
+			_objectRelationshipA_AA, _objectRelationshipLocalService);
 
-		Assert.assertTrue(
+		Assert.assertFalse(
 			_resourcePermissionLocalService.hasResourcePermission(
 				TestPropsValues.getCompanyId(),
-				objectDefinitionAA.getClassName(),
+				_objectDefinitionAA.getClassName(),
 				ResourceConstants.SCOPE_GROUP_TEMPLATE,
 				String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
 				organizationRole.getRoleId(), ActionKeys.UPDATE));
-		Assert.assertTrue(
+		Assert.assertFalse(
 			_resourcePermissionLocalService.hasResourcePermission(
 				TestPropsValues.getCompanyId(),
-				objectDefinitionAA.getClassName(),
-				ResourceConstants.SCOPE_GROUP_TEMPLATE,
-				String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
-				organizationRole.getRoleId(), objectAction.getName()));
-		Assert.assertTrue(
-			_resourcePermissionLocalService.hasResourcePermission(
-				TestPropsValues.getCompanyId(),
-				objectDefinitionAA.getPortletId(),
+				_objectDefinitionAA.getPortletId(),
 				ResourceConstants.SCOPE_COMPANY,
 				String.valueOf(TestPropsValues.getCompanyId()),
 				regularRole.getRoleId(), ActionKeys.ACCESS_IN_CONTROL_PANEL));
-		Assert.assertTrue(
+		Assert.assertFalse(
 			_resourcePermissionLocalService.hasResourcePermission(
 				TestPropsValues.getCompanyId(),
-				objectDefinitionAA.getResourceName(),
+				_objectDefinitionAA.getResourceName(),
 				ResourceConstants.SCOPE_GROUP_TEMPLATE,
 				String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
 				siteRole.getRoleId(), ObjectActionKeys.ADD_OBJECT_ENTRY));
 
-		TreeTestUtil.deleteObjectDefinitionHierarchy(
-			_objectDefinitionLocalService, new String[] {"C_A", "C_AA"},
-			_objectEntryLocalService, _objectRelationshipLocalService);
+		Assert.assertTrue(
+			_resourcePermissionLocalService.hasResourcePermission(
+				TestPropsValues.getCompanyId(),
+				_objectDefinitionAA.getClassName(),
+				ResourceConstants.SCOPE_GROUP_TEMPLATE,
+				String.valueOf(GroupConstants.DEFAULT_PARENT_GROUP_ID),
+				organizationRole.getRoleId(), objectAction.getName()));
+	}
+
+	@Test
+	public void testUnbindObjectDefinitionsWithSiblingNode() throws Exception {
+		TreeTestUtil.bind(
+			_objectRelationshipLocalService,
+			List.of(_objectRelationshipA_AA, _objectRelationshipA_AB));
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAB, new ObjectDefinition[] {_objectDefinitionA}
+			).build());
+
+		TreeTestUtil.unbind(
+			_objectRelationshipLocalService.getObjectRelationship(
+				_objectRelationshipA_AB.getObjectRelationshipId()),
+			_objectRelationshipLocalService);
+
+		TreeTestUtil.assertRootObjectDefinitionIds(
+			LinkedHashMapBuilder.put(
+				_objectDefinitionA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAA, new ObjectDefinition[] {_objectDefinitionA}
+			).put(
+				_objectDefinitionAB, new ObjectDefinition[0]
+			).build());
 	}
 
 	@Test
@@ -1726,8 +2045,6 @@ public class ObjectDefinitionTreeUtilTest {
 
 		_addObjectAction("C_AA");
 
-		_assertModelResourceNames(ListUtil.fromArray("C_A", "C_AA"));
-
 		_testCreateObjectDefinitionTree(
 			true,
 			LinkedHashMapBuilder.put(
@@ -1736,11 +2053,9 @@ public class ObjectDefinitionTreeUtilTest {
 				"AAAAA", new String[0]
 			).build());
 
-		_updateWorkflowDefinitionLink("C_AAAA", "Single Approver");
+		_updateWorkflowDefinitionLink("C_AAAA");
 
 		_addObjectAction("C_AAAAA");
-
-		_assertModelResourceNames(ListUtil.fromArray("C_AAAA", "C_AAAAA"));
 
 		objectDefinitionAAA =
 			ObjectDefinitionTestUtil.addCustomObjectDefinition("AAA");
@@ -1762,8 +2077,6 @@ public class ObjectDefinitionTreeUtilTest {
 			TestPropsValues.getUserId(),
 			objectDefinitionAAA.getObjectDefinitionId());
 
-		_assertModelResourceNames(ListUtil.fromArray("C_A", "C_AA", "C_AAAAA"));
-
 		objectDefinitionA = _objectDefinitionLocalService.getObjectDefinition(
 			TestPropsValues.getCompanyId(), "C_A");
 
@@ -1783,15 +2096,21 @@ public class ObjectDefinitionTreeUtilTest {
 				objectDefinitionA.getObjectDefinitionId()),
 			_objectDefinitionLocalService);
 
-		_updateWorkflowDefinitionLink("C_A", "Single Approver");
+		_updateWorkflowDefinitionLink("C_A");
 
 		TreeTestUtil.unbind(
 			objectDefinitionA.getObjectDefinitionId(),
 			_objectRelationshipLocalService);
 
-		_assertModelResourceNames(ListUtil.fromArray("C_A"));
-		_assertModelResourceNames(ListUtil.fromArray("C_AA", "C_AAAAA"));
-		_assertWorkflowDefinitionLink("C_AA", "Single Approver");
+		ObjectDefinition objectDefinitionAA =
+			_objectDefinitionLocalService.getObjectDefinition(
+				TestPropsValues.getCompanyId(), "C_AA");
+
+		Assert.assertTrue(
+			ListUtil.isEmpty(
+				_workflowDefinitionLinkLocalService.getWorkflowDefinitionLinks(
+					objectDefinitionAA.getCompanyId(),
+					objectDefinitionAA.getClassName())));
 
 		TreeTestUtil.deleteObjectDefinitionHierarchy(
 			_objectDefinitionLocalService,
@@ -2069,7 +2388,7 @@ public class ObjectDefinitionTreeUtilTest {
 
 		ObjectDefinition objectDefinition =
 			ObjectDefinitionTestUtil.addCustomObjectDefinition(
-				0, false, name,
+				0, name,
 				List.of(
 					new TextObjectFieldBuilder(
 					).labelMap(
@@ -2118,7 +2437,24 @@ public class ObjectDefinitionTreeUtilTest {
 			null, values, ServiceContextTestUtil.getServiceContext());
 	}
 
-	private void _asserScreenNavigationCategories(
+	private void _assertRootObjectEntryIds(Map<ObjectEntry, Long> expectedMap)
+		throws Exception {
+
+		_entityCache.clearCache();
+
+		for (Map.Entry<ObjectEntry, Long> entry : expectedMap.entrySet()) {
+			ObjectEntry objectEntry = entry.getKey();
+
+			objectEntry = _objectEntryLocalService.getObjectEntry(
+				objectEntry.getObjectEntryId());
+
+			Assert.assertEquals(
+				GetterUtil.getLong(entry.getValue()),
+				objectEntry.getRootObjectEntryId());
+		}
+	}
+
+	private void _assertScreenNavigationCategories(
 			int expectedSize, String objectDefinitionName)
 		throws Exception {
 
@@ -2134,125 +2470,6 @@ public class ObjectDefinitionTreeUtilTest {
 		Assert.assertEquals(
 			screenNavigationCategories.toString(), expectedSize,
 			screenNavigationCategories.size());
-	}
-
-	private void _assertHasResourcePermission(
-			boolean expectedHasResourcePermission, ObjectEntry objectEntry,
-			Role role)
-		throws Exception {
-
-		ObjectDefinition objectDefinition =
-			_objectDefinitionLocalService.fetchObjectDefinition(
-				objectEntry.getObjectDefinitionId());
-
-		Assert.assertEquals(
-			expectedHasResourcePermission,
-			_resourcePermissionLocalService.hasResourcePermission(
-				TestPropsValues.getCompanyId(), objectDefinition.getClassName(),
-				ResourceConstants.SCOPE_INDIVIDUAL,
-				String.valueOf(objectEntry.getObjectEntryId()),
-				role.getRoleId(), ActionKeys.UPDATE));
-		Assert.assertEquals(
-			expectedHasResourcePermission,
-			_resourcePermissionLocalService.hasResourcePermission(
-				TestPropsValues.getCompanyId(), objectDefinition.getClassName(),
-				ResourceConstants.SCOPE_INDIVIDUAL,
-				String.valueOf(objectEntry.getObjectEntryId()),
-				role.getRoleId(), ActionKeys.VIEW));
-	}
-
-	private void _assertModelResourceNames(List<String> objectDefinitionNames)
-		throws Exception {
-
-		Map<String, Set<String>> resourceReferences =
-			ReflectionTestUtil.getFieldValue(
-				_resourceActions, "_resourceReferences");
-
-		ObjectDefinition rootObjectDefinition =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), objectDefinitionNames.get(0));
-
-		List<String> modelResourceNames = ListUtil.filter(
-			new ArrayList<>(
-				resourceReferences.get(rootObjectDefinition.getPortletId())),
-			resourceName -> StringUtil.startsWith(
-				resourceName,
-				ObjectDefinitionConstants.
-					CLASS_NAME_PREFIX_CUSTOM_OBJECT_DEFINITION));
-
-		Assert.assertEquals(
-			modelResourceNames.toString(), objectDefinitionNames.size(),
-			modelResourceNames.size());
-
-		for (String objectDefinitionName : objectDefinitionNames) {
-			ObjectDefinition objectDefinition =
-				_objectDefinitionLocalService.getObjectDefinition(
-					TestPropsValues.getCompanyId(), objectDefinitionName);
-
-			Assert.assertThat(
-				modelResourceNames,
-				CoreMatchers.hasItem(objectDefinition.getClassName()));
-		}
-	}
-
-	private void _assertRootObjectDefinitionIdIsZero(
-			String objectDefinitionShortName)
-		throws Exception {
-
-		ObjectDefinition objectDefinition =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(),
-				"C_" + objectDefinitionShortName);
-
-		Assert.assertEquals(0, objectDefinition.getRootObjectDefinitionId());
-	}
-
-	private void _assertRootObjectEntryId(
-		long expectedRootObjectEntryId, long objectEntryId) {
-
-		ObjectEntry objectEntry = _objectEntryLocalService.fetchObjectEntry(
-			objectEntryId);
-
-		Assert.assertEquals(
-			expectedRootObjectEntryId, objectEntry.getRootObjectEntryId());
-	}
-
-	private void _assertWorkflowDefinitionLink(
-			String objectDefinitionName, String workflowDefinitionName)
-		throws Exception {
-
-		ObjectDefinition objectDefinition =
-			_objectDefinitionLocalService.getObjectDefinition(
-				TestPropsValues.getCompanyId(), objectDefinitionName);
-
-		List<WorkflowDefinitionLink> workflowDefinitionLinks =
-			_workflowDefinitionLinkLocalService.getWorkflowDefinitionLinks(
-				objectDefinition.getCompanyId(),
-				objectDefinition.getClassName());
-
-		Assert.assertEquals(
-			workflowDefinitionLinks.toString(), 1,
-			workflowDefinitionLinks.size());
-
-		WorkflowDefinitionLink workflowDefinitionLink =
-			workflowDefinitionLinks.get(0);
-
-		Assert.assertEquals(
-			workflowDefinitionName,
-			workflowDefinitionLink.getWorkflowDefinitionName());
-	}
-
-	private ObjectRelationship _bindObjectDefinitions(
-			long objectDefinitionId1, long objectDefinitionId2)
-		throws Exception {
-
-		return _objectRelationshipLocalService.addObjectRelationship(
-			StringUtil.randomId(), TestPropsValues.getUserId(),
-			objectDefinitionId1, objectDefinitionId2, 0,
-			ObjectRelationshipConstants.DELETION_TYPE_CASCADE, true,
-			LocalizedMapUtil.getLocalizedMap(RandomTestUtil.randomString()),
-			StringUtil.randomId(), false,
-			ObjectRelationshipConstants.TYPE_ONE_TO_MANY, null);
 	}
 
 	private void _completeWorkflowTask(String className, long classPK)
@@ -2296,9 +2513,10 @@ public class ObjectDefinitionTreeUtilTest {
 				biConsumer)
 		throws Exception {
 
-		ObjectRelationship objectRelationship = _bindObjectDefinitions(
+		ObjectRelationship objectRelationship = TreeTestUtil.bind(
 			objectDefinition1.getObjectDefinitionId(),
-			objectDefinition2.getObjectDefinitionId());
+			objectDefinition2.getObjectDefinitionId(),
+			_objectRelationshipLocalService);
 
 		Assert.assertTrue(objectRelationship.isEdge());
 		Assert.assertEquals(
@@ -2386,19 +2604,9 @@ public class ObjectDefinitionTreeUtilTest {
 				objectRelationship.getLabelMap(), null);
 
 		Assert.assertFalse(objectRelationship.isEdge());
-
-		ObjectDefinition objectDefinition1 =
-			_objectDefinitionLocalService.fetchObjectDefinition(
-				objectRelationship.getObjectDefinitionId1());
-		objectDefinition2 = _objectDefinitionLocalService.fetchObjectDefinition(
-			objectRelationship.getObjectDefinitionId2());
-
-		Assert.assertEquals(
-			objectDefinition1.getScope(), objectDefinition2.getScope());
 	}
 
-	private void _updateWorkflowDefinitionLink(
-			String objectDefinitionName, String workflowDefinitionName)
+	private void _updateWorkflowDefinitionLink(String objectDefinitionName)
 		throws Exception {
 
 		ObjectDefinition objectDefinition =
@@ -2407,10 +2615,23 @@ public class ObjectDefinitionTreeUtilTest {
 
 		_workflowDefinitionLinkLocalService.updateWorkflowDefinitionLink(
 			TestPropsValues.getUserId(), TestPropsValues.getCompanyId(), 0,
-			objectDefinition.getClassName(), 0, 0, workflowDefinitionName, 1);
+			objectDefinition.getClassName(), 0, 0, "Single Approver", 1);
 
-		_assertWorkflowDefinitionLink(
-			objectDefinitionName, workflowDefinitionName);
+		List<WorkflowDefinitionLink> workflowDefinitionLinks =
+			_workflowDefinitionLinkLocalService.getWorkflowDefinitionLinks(
+				objectDefinition.getCompanyId(),
+				objectDefinition.getClassName());
+
+		Assert.assertEquals(
+			workflowDefinitionLinks.toString(), 1,
+			workflowDefinitionLinks.size());
+
+		WorkflowDefinitionLink workflowDefinitionLink =
+			workflowDefinitionLinks.get(0);
+
+		Assert.assertEquals(
+			"Single Approver",
+			workflowDefinitionLink.getWorkflowDefinitionName());
 	}
 
 	@Inject
@@ -2418,6 +2639,13 @@ public class ObjectDefinitionTreeUtilTest {
 
 	@Inject
 	private ObjectActionLocalService _objectActionLocalService;
+
+	private ObjectDefinition _objectDefinitionA;
+	private ObjectDefinition _objectDefinitionAA;
+	private ObjectDefinition _objectDefinitionAAA;
+	private ObjectDefinition _objectDefinitionAAAA;
+	private ObjectDefinition _objectDefinitionAB;
+	private ObjectDefinition _objectDefinitionB;
 
 	@Inject
 	private ObjectDefinitionLocalService _objectDefinitionLocalService;
@@ -2430,11 +2658,17 @@ public class ObjectDefinitionTreeUtilTest {
 	@Inject
 	private ObjectFieldLocalService _objectFieldLocalService;
 
-	@Inject
-	private ObjectRelationshipLocalService _objectRelationshipLocalService;
+	private ObjectRelationship _objectRelationshipA_AA;
+	private ObjectField _objectRelationshipA_AAObjectField2;
+	private ObjectRelationship _objectRelationshipA_AB;
+	private ObjectRelationship _objectRelationshipAA_AAA;
+	private ObjectField _objectRelationshipAA_AAAObjectField2;
+	private ObjectRelationship _objectRelationshipAAA_AAAA;
+	private ObjectRelationship _objectRelationshipB_AA;
+	private ObjectField _objectRelationshipB_AAObjectField2;
 
 	@Inject
-	private ResourceActions _resourceActions;
+	private ObjectRelationshipLocalService _objectRelationshipLocalService;
 
 	@Inject
 	private ResourcePermissionLocalService _resourcePermissionLocalService;
