@@ -6,33 +6,35 @@
 package com.liferay.site.cms.site.initializer.internal.display.context;
 
 import com.liferay.frontend.data.set.model.FDSActionDropdownItem;
+import com.liferay.frontend.data.set.model.FDSActionDropdownItemBuilder;
 import com.liferay.frontend.taglib.clay.servlet.taglib.util.CreationMenu;
 import com.liferay.frontend.taglib.clay.servlet.taglib.util.CreationMenuBuilder;
 import com.liferay.frontend.taglib.clay.servlet.taglib.util.DropdownItem;
 import com.liferay.object.constants.ObjectFolderConstants;
 import com.liferay.object.constants.ObjectPortletKeys;
+import com.liferay.object.model.ObjectDefinition;
 import com.liferay.petra.string.StringBundler;
-import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.exception.PortalException;
+import com.liferay.portal.kernel.json.JSONArray;
+import com.liferay.portal.kernel.json.JSONFactoryUtil;
+import com.liferay.portal.kernel.json.JSONUtil;
 import com.liferay.portal.kernel.language.LanguageUtil;
-import com.liferay.portal.kernel.log.Log;
-import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.model.Layout;
+import com.liferay.portal.kernel.portlet.LiferayWindowState;
 import com.liferay.portal.kernel.portlet.PortletURLFactoryUtil;
 import com.liferay.portal.kernel.portlet.url.builder.PortletURLBuilder;
 import com.liferay.portal.kernel.portlet.url.builder.ResourceURLBuilder;
-import com.liferay.portal.kernel.service.LayoutLocalServiceUtil;
 import com.liferay.portal.kernel.theme.ThemeDisplay;
 import com.liferay.portal.kernel.util.HashMapBuilder;
-import com.liferay.portal.kernel.util.HttpComponentsUtil;
 import com.liferay.portal.kernel.util.PortalUtil;
 import com.liferay.portal.kernel.util.WebKeys;
+import com.liferay.site.cms.site.initializer.internal.util.ActionUtil;
 
+import jakarta.portlet.ActionRequest;
 import jakarta.portlet.PortletRequest;
 
 import jakarta.servlet.http.HttpServletRequest;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -57,26 +59,55 @@ public class ViewStructuresDisplayContext {
 			ObjectFolderConstants.EXTERNAL_REFERENCE_CODE_FILE_TYPES, "')");
 	}
 
+	public Map<String, Object> getBreadcrumbProps() throws PortalException {
+		JSONArray jsonArray = JSONFactoryUtil.createJSONArray();
+
+		_addBreadcrumbItem(jsonArray, false, null, _getLayoutName());
+
+		return HashMapBuilder.<String, Object>put(
+			"breadcrumbItems", jsonArray
+		).put(
+			"hideSpace", true
+		).build();
+	}
+
 	public List<DropdownItem> getBulkActionDropdownItems() {
-		return Collections.emptyList();
+		return List.of(
+			FDSActionDropdownItemBuilder.setHighlighted(
+				true
+			).setHref(
+				"#"
+			).setIcon(
+				"workflow"
+			).setLabel(
+				LanguageUtil.get(_httpServletRequest, "assign-default-workflow")
+			).setModalSize(
+				"lg"
+			).setTarget(
+				"modal"
+			).build(
+				"assign-default-workflow"
+			));
 	}
 
 	public CreationMenu getCreationMenu() {
 		return CreationMenuBuilder.addPrimaryDropdownItem(
 			dropdownItem -> {
 				dropdownItem.setHref(
-					_getHref(
-						ObjectFolderConstants.
-							EXTERNAL_REFERENCE_CODE_CONTENT_STRUCTURES));
+					ActionUtil.getBaseStructureBuilderURL(_themeDisplay) +
+						"?objectFolderExternalReferenceCode=" +
+							ObjectFolderConstants.
+								EXTERNAL_REFERENCE_CODE_CONTENT_STRUCTURES);
 				dropdownItem.setLabel(
 					LanguageUtil.get(_httpServletRequest, "content"));
 			}
 		).addPrimaryDropdownItem(
 			dropdownItem -> {
 				dropdownItem.setHref(
-					_getHref(
-						ObjectFolderConstants.
-							EXTERNAL_REFERENCE_CODE_FILE_TYPES));
+					ActionUtil.getBaseStructureBuilderURL(_themeDisplay) +
+						"?objectFolderExternalReferenceCode=" +
+							ObjectFolderConstants.
+								EXTERNAL_REFERENCE_CODE_FILE_TYPES);
 				dropdownItem.setLabel(
 					LanguageUtil.get(_httpServletRequest, "file"));
 			}
@@ -88,30 +119,14 @@ public class ViewStructuresDisplayContext {
 
 		return List.of(
 			new FDSActionDropdownItem(
-				HttpComponentsUtil.addParameters(
-					PortalUtil.getLayoutFullURL(
-						LayoutLocalServiceUtil.getLayoutByFriendlyURL(
-							_themeDisplay.getScopeGroupId(), false,
-							"/structure-builder"),
-						_themeDisplay),
-					"objectDefinitionExternalReferenceCode",
-					"{externalReferenceCode}"),
+				ActionUtil.getBaseStructureBuilderURL(_themeDisplay) +
+					"?objectDefinitionId={id}",
 				"pencil", "edit", LanguageUtil.get(_httpServletRequest, "edit"),
 				"get", "update", null),
 			new FDSActionDropdownItem(
-				HttpComponentsUtil.addParameters(
-					PortalUtil.getLayoutFullURL(
-						LayoutLocalServiceUtil.getLayoutByFriendlyURL(
-							_themeDisplay.getScopeGroupId(), false,
-							"/structure-usages"),
-						_themeDisplay),
-					"objectDefinitionId", "{id}"),
+				ActionUtil.getBaseStructureUsagesURL(_themeDisplay) + "{id}",
 				"list-ul", "viewUsages",
 				LanguageUtil.get(_httpServletRequest, "view-usages"), "get",
-				null, null),
-			new FDSActionDropdownItem(
-				"", "copy", "copy",
-				LanguageUtil.get(_httpServletRequest, "make-a-copy"), null,
 				null, null),
 			new FDSActionDropdownItem(
 				ResourceURLBuilder.createResourceURL(
@@ -142,64 +157,60 @@ public class ViewStructuresDisplayContext {
 				LanguageUtil.get(_httpServletRequest, "import-and-override"),
 				"get", "update", null),
 			new FDSActionDropdownItem(
-				"", "password-policies", "permissions",
+				PortletURLBuilder.create(
+					PortalUtil.getControlPanelPortletURL(
+						_httpServletRequest,
+						"com_liferay_portlet_configuration_web_portlet_" +
+							"PortletConfigurationPortlet",
+						ActionRequest.RENDER_PHASE)
+				).setMVCPath(
+					"/edit_permissions.jsp"
+				).setRedirect(
+					_themeDisplay.getURLCurrent()
+				).setParameter(
+					"modelResource", ObjectDefinition.class.getName()
+				).setParameter(
+					"modelResourceDescription", "{name}"
+				).setParameter(
+					"resourcePrimKey", "{id}"
+				).setWindowState(
+					LiferayWindowState.POP_UP
+				).buildString(),
+				"password-policies", "permissions",
 				LanguageUtil.get(_httpServletRequest, "permissions"), "get",
 				"permissions", "modal-permissions"),
 			new FDSActionDropdownItem(
-				ResourceURLBuilder.createResourceURL(
-					PortletURLFactoryUtil.create(
-						_httpServletRequest,
-						ObjectPortletKeys.OBJECT_DEFINITIONS,
-						PortletRequest.RESOURCE_PHASE)
-				).setParameter(
-					"objectDefinitionId", "{id}"
-				).setResourceID(
-					"/object_definitions/get_object_definition_delete_info"
-				).buildString(),
+				StringBundler.concat(
+					_themeDisplay.getPortalURL(), _themeDisplay.getPathMain(),
+					"/cms/get_object_definition_deletion_info?",
+					"objectDefinitionId={id}"),
 				"trash", "delete",
 				LanguageUtil.get(_httpServletRequest, "delete"), "delete",
-				"delete", null));
+				"delete", null, Map.of("system", false)));
 	}
 
-	public Map<String, Object> getToolbarProps() throws PortalException {
-		return HashMapBuilder.<String, Object>put(
-			"title",
-			() -> {
-				Layout layout = _themeDisplay.getLayout();
+	private void _addBreadcrumbItem(
+		JSONArray jsonArray, boolean active, String friendlyURL, String label) {
 
-				if (layout == null) {
-					return null;
-				}
-
-				return layout.getName(_themeDisplay.getLocale(), true);
-			}
-		).put(
-			"toolbarClassName", "section-toolbar tbar-light"
-		).put(
-			"toolbarTitleClassName", "section-toolbar-title"
-		).build();
+		jsonArray.put(
+			JSONUtil.put(
+				"active", active
+			).put(
+				"href", friendlyURL
+			).put(
+				"label", label
+			));
 	}
 
-	private String _getHref(String objectFolderExternalReferenceCode) {
-		try {
-			return HttpComponentsUtil.addParameters(
-				PortalUtil.getLayoutFullURL(
-					LayoutLocalServiceUtil.getLayoutByFriendlyURL(
-						_themeDisplay.getScopeGroupId(), false,
-						"/structure-builder"),
-					_themeDisplay),
-				"objectFolderExternalReferenceCode",
-				objectFolderExternalReferenceCode);
-		}
-		catch (PortalException portalException) {
-			_log.error(portalException);
+	private String _getLayoutName() {
+		Layout layout = _themeDisplay.getLayout();
+
+		if (layout == null) {
+			return null;
 		}
 
-		return StringPool.BLANK;
+		return layout.getName(_themeDisplay.getLocale(), true);
 	}
-
-	private static final Log _log = LogFactoryUtil.getLog(
-		ViewStructuresDisplayContext.class);
 
 	private final HttpServletRequest _httpServletRequest;
 	private final ThemeDisplay _themeDisplay;
