@@ -17,9 +17,14 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.ObjectOutputStream;
 
+import java.lang.management.ManagementFactory;
+import java.lang.management.RuntimeMXBean;
+
+import java.net.InetAddress;
 import java.net.URISyntaxException;
 import java.net.URL;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
@@ -29,8 +34,11 @@ import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -71,15 +79,16 @@ public class DBUpgradeClient {
 			if (commandLine.hasOption("jvm-opts")) {
 				String optionValue = commandLine.getOptionValue("jvm-opts");
 
-				Collections.addAll(jvmOpts, optionValue.split(" "));
+				if (optionValue != null) {
+					optionValue = optionValue.trim();
+
+					if (!optionValue.isEmpty()) {
+						Collections.addAll(jvmOpts, optionValue.split(" "));
+					}
+				}
 			}
-			else {
-				jvmOpts.add("-Dfile.encoding=UTF8");
-				jvmOpts.add("-Duser.country=US");
-				jvmOpts.add("-Duser.language=en");
-				jvmOpts.add("-Duser.timezone=GMT");
-				jvmOpts.add("-Xmx2048m");
-			}
+
+			_addDefaultJVMOpts(jvmOpts);
 
 			if (commandLine.hasOption("debug")) {
 				jvmOpts.add(
@@ -154,12 +163,6 @@ public class DBUpgradeClient {
 
 		_fileOutputStream = new FileOutputStream(_logFile);
 
-		_portalUpgradeDatabasePropertiesFile = new File(
-			_jarDir, "portal-upgrade-database.properties");
-
-		_portalUpgradeDatabaseProperties = _readProperties(
-			_portalUpgradeDatabasePropertiesFile);
-
 		_portalUpgradeExtPropertiesFile = new File(
 			_jarDir, "portal-upgrade-ext.properties");
 
@@ -208,9 +211,7 @@ public class DBUpgradeClient {
 
 		Map<String, String> environment = processBuilder.environment();
 
-		if (_isGTJDK8()) {
-			environment.put("JDK_JAVA_OPTIONS", _buildJDKJavaOptions());
-		}
+		environment.put("JDK_JAVA_OPTIONS", _buildJDKJavaOptions());
 
 		Process process = processBuilder.start();
 
@@ -300,21 +301,54 @@ public class DBUpgradeClient {
 				"Remove " + file + " prior to running an upgrade to prevent " +
 					"possible conflicts.");
 
-			System.exit(0);
+			System.exit(1);
 		}
 
 		try {
-			_verifyPortalUpgradeExtProperties();
+			_verifyPortalUpgradeExtPropertiesLiferayHome();
 
 			_verifyAppServerProperties();
 
-			_verifyPortalUpgradeDatabaseProperties();
+			_verifyPortalUpgradeExtPropertiesDatabase();
 
 			_saveProperties();
 		}
 		catch (IOException ioException) {
-			ioException.printStackTrace();
+			System.err.println(ioException.getMessage());
+			System.err.println(
+				"Stopping the upgrade process. Please fix the errors and try " +
+					"again.");
+
+			System.exit(1);
 		}
+	}
+
+	private static void _addDefaultJVMOpts(List<String> jvmOpts) {
+		Map<String, String> defaultJVMOpts = new LinkedHashMap<>();
+
+		defaultJVMOpts.put("-Dfile.encoding=", "-Dfile.encoding=UTF8");
+		defaultJVMOpts.put("-Duser.country=", "-Duser.country=US");
+		defaultJVMOpts.put("-Duser.language=", "-Duser.language=en");
+		defaultJVMOpts.put("-Duser.timezone=", "-Duser.timezone=GMT");
+		defaultJVMOpts.put("-Xmx", "-Xmx4096m");
+
+		for (Map.Entry<String, String> entry : defaultJVMOpts.entrySet()) {
+			if (!_containsPrefix(jvmOpts, entry.getKey())) {
+				jvmOpts.add(entry.getValue());
+			}
+		}
+	}
+
+	private static boolean _containsPrefix(
+		List<String> jvmOpts, String prefix) {
+
+		for (String jvmOpt : jvmOpts) {
+			if ((jvmOpt != null) && jvmOpt.startsWith(prefix)) {
+				return true;
+			}
+		}
+
+		return false;
 	}
 
 	private static Options _getOptions() {
@@ -364,18 +398,30 @@ public class DBUpgradeClient {
 	}
 
 	private String _buildJDKJavaOptions() {
-		StringBuilder sb = new StringBuilder();
+		Set<String> jdkOptions = new LinkedHashSet<>(_reflectionOpens);
 
-		for (String reflectionOpen : _reflectionOpens) {
-			sb.append(reflectionOpen);
-			sb.append(' ');
+		RuntimeMXBean runtimeMXBean = ManagementFactory.getRuntimeMXBean();
+
+		List<String> inputArguments = runtimeMXBean.getInputArguments();
+
+		for (int i = 0; i < inputArguments.size(); i++) {
+			String inputArgument = inputArguments.get(i);
+
+			if (inputArgument.startsWith("--add-opens=")) {
+				jdkOptions.add(inputArgument);
+			}
+			else if (inputArgument.equals("--add-opens")) {
+				if ((i + 1) < inputArguments.size()) {
+					String nextInputArgument = inputArguments.get(i + 1);
+
+					jdkOptions.add(inputArgument + "=" + nextInputArgument);
+
+					i++;
+				}
+			}
 		}
 
-		if (!_reflectionOpens.isEmpty()) {
-			sb.setLength(sb.length() - 1);
-		}
-
-		return sb.toString();
+		return String.join(" ", jdkOptions);
 	}
 
 	private void _close(Closeable closeable) throws IOException {
@@ -418,6 +464,43 @@ public class DBUpgradeClient {
 		return sb.toString();
 	}
 
+	private String[] _getDBTypes() {
+		if (_appServer == null) {
+			return _DATABASE_TYPES_PORTAL;
+		}
+
+		File portalShieldedContainerLibDir =
+			_appServer.getPortalShieldedContainerLibDir();
+
+		if (portalShieldedContainerLibDir != null) {
+			Path path = portalShieldedContainerLibDir.toPath();
+
+			if (Files.exists(path.resolve("com.liferay.portal.dao.db.jar"))) {
+				return _DATABASE_TYPES_DXP;
+			}
+		}
+
+		return _DATABASE_TYPES_PORTAL;
+	}
+
+	private File _getResolvedDir(
+		boolean allowAbsolutePaths, File baseDir, String dirName) {
+
+		File dir = new File(dirName);
+
+		if (dir.isAbsolute()) {
+			if (allowAbsolutePaths) {
+				return dir;
+			}
+
+			System.err.println(dirName + " is not a relative path.");
+
+			return null;
+		}
+
+		return new File(baseDir, dirName);
+	}
+
 	private GogoShellClient _initGogoShellClient() throws IOException {
 		String value = _portalUpgradeExtProperties.getProperty(
 			"module.framework.properties.osgi.console");
@@ -438,13 +521,8 @@ public class DBUpgradeClient {
 		return new GogoShellClient(host, port);
 	}
 
-	private boolean _isGTJDK8() {
-		String javaVersion = System.getProperty("java.version");
-
-		int majorVersion = Integer.parseInt(
-			javaVersion.substring(0, javaVersion.indexOf('.')));
-
-		if (majorVersion > 8) {
+	private boolean _isEmpty(String value) {
+		if ((value == null) || value.isEmpty()) {
 			return true;
 		}
 
@@ -463,6 +541,17 @@ public class DBUpgradeClient {
 		}
 
 		return true;
+	}
+
+	private boolean _isValidDir(File dir) throws IOException {
+		if (dir.exists() && dir.isDirectory()) {
+			return true;
+		}
+
+		System.err.println(
+			dir.getCanonicalPath() + " does not exist or is not a directory.");
+
+		return false;
 	}
 
 	private void _printHelp() {
@@ -522,10 +611,141 @@ public class DBUpgradeClient {
 		return properties;
 	}
 
+	private String _requestDirName(
+			boolean allowAbsolutePaths, File baseDir, String defaultDirName,
+			String prompt)
+		throws IOException {
+
+		while (true) {
+			System.out.println(prompt + " (" + defaultDirName + "): ");
+
+			String response = _consoleReader.readLine();
+
+			if (response.isEmpty()) {
+				return null;
+			}
+
+			String dirName = response.trim();
+
+			File testDir = _getResolvedDir(
+				allowAbsolutePaths, baseDir, dirName);
+
+			if ((testDir != null) && _isValidDir(testDir)) {
+				if (allowAbsolutePaths) {
+					return testDir.getCanonicalPath();
+				}
+
+				return dirName;
+			}
+		}
+	}
+
+	private String _requestDirNames(
+			boolean allowAbsolutePaths, File baseDir, String defaultDirNames,
+			String prompt)
+		throws IOException {
+
+		while (true) {
+			System.out.println(prompt + " (" + defaultDirNames + "): ");
+
+			String response = _consoleReader.readLine();
+
+			if (response.isEmpty()) {
+				return null;
+			}
+
+			boolean hasErrors = false;
+
+			String dirNames = response.trim();
+
+			for (String dirName : dirNames.split(",")) {
+				dirName = dirName.trim();
+
+				File testDir = _getResolvedDir(
+					allowAbsolutePaths, baseDir, dirName);
+
+				if ((testDir == null) || !_isValidDir(testDir)) {
+					hasErrors = true;
+				}
+			}
+
+			if (!hasErrors) {
+				return dirNames;
+			}
+		}
+	}
+
+	private String _requestHost(String defaultHost, String prompt)
+		throws IOException {
+
+		while (true) {
+			System.out.println(prompt + " (" + defaultHost + "): ");
+
+			String response = _consoleReader.readLine();
+
+			if (response.isEmpty()) {
+				return null;
+			}
+
+			String name = response.trim();
+
+			try {
+				InetAddress.getByName(name);
+
+				return name;
+			}
+			catch (Exception exception) {
+				System.err.println(
+					"Unable to resolve host " + name + ": " +
+						exception.getMessage());
+			}
+		}
+	}
+
+	private Integer _requestPort(int defaultPort, String prompt)
+		throws IOException {
+
+		String port = null;
+
+		if (defaultPort > 0) {
+			port = String.valueOf(defaultPort);
+		}
+		else {
+			port = "none";
+		}
+
+		while (true) {
+			System.out.println(prompt + " (" + port + "): ");
+
+			String response = _consoleReader.readLine();
+
+			if (response.isEmpty()) {
+				return null;
+			}
+
+			if (response.equals("none")) {
+				return 0;
+			}
+
+			try {
+				int portInt = Integer.parseInt(response);
+
+				if ((portInt < 0) || (portInt > 65535)) {
+					System.err.println("Port must be between 0 and 65535.");
+
+					continue;
+				}
+
+				return portInt;
+			}
+			catch (NumberFormatException numberFormatException) {
+				System.err.println(response + " is not a valid port number.");
+			}
+		}
+	}
+
 	private void _saveProperties() throws IOException {
 		_appServerProperties.store(_appServerPropertiesFile);
-		_portalUpgradeDatabaseProperties.store(
-			_portalUpgradeDatabasePropertiesFile);
 		_portalUpgradeExtProperties.store(_portalUpgradeExtPropertiesFile);
 	}
 
@@ -533,7 +753,7 @@ public class DBUpgradeClient {
 		String value = _appServerProperties.getProperty(
 			"server.detector.server.id");
 
-		if ((value == null) || value.isEmpty()) {
+		if (_isEmpty(value)) {
 			String response = null;
 
 			while (_appServer == null) {
@@ -565,49 +785,46 @@ public class DBUpgradeClient {
 				}
 			}
 
-			System.out.println(
-				"Please enter your application server directory (" +
-					_appServer.getDir() + "): ");
+			String appServerDirName = _requestDirName(
+				true,
+				new File(
+					_portalUpgradeExtProperties.getProperty("liferay.home")),
+				_appServer.getDir(
+				).getPath(),
+				"Please enter your application server directory");
 
-			response = _consoleReader.readLine();
-
-			if (!response.isEmpty()) {
-				_appServer.setDirName(response);
-			}
-
-			System.out.println(
-				"Please enter your extra library directories in application " +
-					"server directory (" + _appServer.getExtraLibDirNames() +
-						"): ");
-
-			response = _consoleReader.readLine();
-
-			if (!response.isEmpty()) {
-				_appServer.setExtraLibDirNames(response);
-			}
-
-			System.out.println(
-				"Please enter your global library directory in application " +
-					"server directory (" + _appServer.getGlobalLibDirName() +
-						"): ");
-
-			response = _consoleReader.readLine();
-
-			if (!response.isEmpty()) {
-				_appServer.setGlobalLibDirName(response);
-			}
-
-			System.out.println(
-				"Please enter your portal directory in application server " +
-					"directory (" + _appServer.getPortalDirName() + "): ");
-
-			response = _consoleReader.readLine();
-
-			if (!response.isEmpty()) {
-				_appServer.setPortalDirName(response);
+			if (appServerDirName != null) {
+				_appServer.setDirName(appServerDirName);
 			}
 
 			File dir = _appServer.getDir();
+
+			String extraLibDirNames = _requestDirNames(
+				false, dir, _appServer.getExtraLibDirNames(),
+				"Please enter your extra library directories in application " +
+					"server directory");
+
+			if (extraLibDirNames != null) {
+				_appServer.setExtraLibDirNames(extraLibDirNames);
+			}
+
+			String globalLibDirName = _requestDirName(
+				false, dir, _appServer.getGlobalLibDirName(),
+				"Please enter your global library directory in application " +
+					"server directory");
+
+			if (globalLibDirName != null) {
+				_appServer.setGlobalLibDirName(globalLibDirName);
+			}
+
+			String portalDirName = _requestDirName(
+				false, dir, _appServer.getPortalDirName(),
+				"Please enter your portal directory in application server " +
+					"directory");
+
+			if (portalDirName != null) {
+				_appServer.setPortalDirName(portalDirName);
+			}
 
 			_appServerProperties.setProperty("dir", dir.getCanonicalPath());
 
@@ -622,52 +839,234 @@ public class DBUpgradeClient {
 				_appServer.getServerDetectorServerId());
 		}
 		else {
+			File liferayHome = new File(
+				_portalUpgradeExtProperties.getProperty("liferay.home"));
+
+			_appServer = AppServer.getAppServer(liferayHome, value);
+
+			if (_appServer == null) {
+				System.err.println(
+					value + " is an unsupported application server.");
+
+				throw new IOException(
+					"Invalid configuration in " +
+						_appServerPropertiesFile.getName());
+			}
+
 			String dirName = _appServerProperties.getProperty("dir");
+
+			if (!_verifyDirName(
+					true, liferayHome, dirName,
+					_appServerPropertiesFile.getName(), "dir")) {
+
+				throw new IOException(
+					"Invalid configuration in " +
+						_appServerPropertiesFile.getName());
+			}
 
 			File dir = new File(dirName);
 
 			if (!dir.isAbsolute()) {
-				dir = new File(_jarDir, dirName);
+				dir = new File(liferayHome, dirName);
 			}
 
 			dirName = dir.getCanonicalPath();
 
+			_appServer.setDirName(dirName);
+
 			_appServerProperties.setProperty("dir", dirName);
 
-			_appServer = new AppServer(
-				dirName, _appServerProperties.getProperty("extra.lib.dirs"),
-				_appServerProperties.getProperty("global.lib.dir"),
-				_appServerProperties.getProperty("portal.dir"), value);
+			String extraLibDirNames = _appServerProperties.getProperty(
+				"extra.lib.dirs");
+			String globalLibDirName = _appServerProperties.getProperty(
+				"global.lib.dir");
+			String portalDirName = _appServerProperties.getProperty(
+				"portal.dir");
+
+			if (!_verifyDirNames(
+					false, dir, extraLibDirNames,
+					_appServerPropertiesFile.getName(), "extra.lib.dirs") |
+				!_verifyDirName(
+					false, dir, globalLibDirName,
+					_appServerPropertiesFile.getName(), "global.lib.dir") |
+				!_verifyDirName(
+					false, dir, portalDirName,
+					_appServerPropertiesFile.getName(), "portal.dir")) {
+
+				throw new IOException(
+					"Invalid configuration in " +
+						_appServerPropertiesFile.getName());
+			}
+
+			_appServer.setExtraLibDirNames(extraLibDirNames);
+			_appServer.setGlobalLibDirName(globalLibDirName);
+			_appServer.setPortalDirName(portalDirName);
 		}
 	}
 
-	private void _verifyPortalUpgradeDatabaseProperties() throws IOException {
-		String value = _portalUpgradeDatabaseProperties.getProperty(
+	private boolean _verifyDirName(
+			boolean allowAbsolutePaths, File baseDir, String dirName,
+			String propertiesFileName, String propertyName)
+		throws IOException {
+
+		if (dirName != null) {
+			dirName = dirName.trim();
+		}
+
+		if ((dirName == null) || dirName.isEmpty()) {
+			System.err.println(
+				"Property \"" + propertyName + "\" is not set in " +
+					propertiesFileName + ".");
+
+			return false;
+		}
+
+		File testDir = _getResolvedDir(allowAbsolutePaths, baseDir, dirName);
+
+		if (testDir == null) {
+			System.err.println(
+				"Property '" + propertyName + "' in " + propertiesFileName +
+					" contains an invalid path: " + dirName);
+
+			return false;
+		}
+
+		return _isValidDir(testDir);
+	}
+
+	private boolean _verifyDirNames(
+			boolean allowAbsolutePaths, File baseDir, String dirNames,
+			String propertiesFileName, String propertyName)
+		throws IOException {
+
+		if ((dirNames == null) ||
+			dirNames.trim(
+			).isEmpty()) {
+
+			return true;
+		}
+
+		boolean hasErrors = false;
+
+		for (String dirName : dirNames.split(",")) {
+			dirName = dirName.trim();
+
+			if (dirName.isEmpty()) {
+				continue;
+			}
+
+			File testDir = _getResolvedDir(
+				allowAbsolutePaths, baseDir, dirName);
+
+			if (testDir == null) {
+				System.err.println(
+					"Property \"" + propertyName + "\" in " +
+						propertiesFileName + " contains an invalid path: " +
+							dirName);
+
+				hasErrors = true;
+			}
+			else if (!_isValidDir(testDir)) {
+				hasErrors = true;
+			}
+		}
+
+		return !hasErrors;
+	}
+
+	private void _verifyPortalUpgradeExtPropertiesDatabase()
+		throws IOException {
+
+		File portalUpgradeDatabasePropertiesFile = new File(
+			_jarDir, "portal-upgrade-database.properties");
+
+		if (portalUpgradeDatabasePropertiesFile.exists()) {
+			System.err.println(
+				"The portal-upgrade-database.properties file is deprecated " +
+					"and will be ignored. Please move all database " +
+						"configuration properties to " +
+							"portal-upgrade-ext.properties.");
+		}
+
+		String driverClassName = _portalUpgradeExtProperties.getProperty(
 			"jdbc.default.driverClassName");
 
-		if ((value != null) && !value.isEmpty()) {
+		if (!_isEmpty(driverClassName)) {
 			return;
 		}
 
 		String response = null;
+
+		File portalExtPropertiesFile = new File(
+			_portalUpgradeExtProperties.getProperty("liferay.home"),
+			"portal-ext.properties");
+
+		Properties portalExtProperties = _readProperties(
+			portalExtPropertiesFile);
+
+		driverClassName = portalExtProperties.getProperty(
+			"jdbc.default.driverClassName");
+
+		String password = null;
+		String url = null;
+		String userName = null;
+
+		if (!_isEmpty(driverClassName)) {
+			password = portalExtProperties.getProperty("jdbc.default.password");
+			url = portalExtProperties.getProperty("jdbc.default.url");
+			userName = portalExtProperties.getProperty("jdbc.default.username");
+		}
+
+		if (!_isEmpty(driverClassName) && !_isEmpty(password) &&
+			!_isEmpty(url) && !_isEmpty(userName)) {
+
+			System.out.println(
+				"An existing database configuration was found in: " +
+					portalExtPropertiesFile.getAbsolutePath());
+			System.out.println(
+				"\tjdbc.default.driverClassName=" + driverClassName);
+			System.out.println("\tjdbc.default.url=" + url);
+			System.out.println("\tjdbc.default.username=" + userName);
+			System.out.println(
+				"\tjdbc.default.password=" + password.replaceAll(".", "*"));
+
+			System.out.println("\nUse existing JDBC properties (y/N):");
+
+			response = _consoleReader.readLine();
+
+			if (response.equalsIgnoreCase("y") ||
+				response.equalsIgnoreCase("yes")) {
+
+				_portalUpgradeExtProperties.setProperty(
+					"jdbc.default.driverClassName", driverClassName);
+				_portalUpgradeExtProperties.setProperty(
+					"jdbc.default.password", password);
+				_portalUpgradeExtProperties.setProperty(
+					"jdbc.default.url", url);
+				_portalUpgradeExtProperties.setProperty(
+					"jdbc.default.username", userName);
+
+				return;
+			}
+		}
 
 		Database dataSource = null;
 
 		while (dataSource == null) {
 			System.out.print("[ ");
 
-			for (String databaseType : _DATABASE_TYPES) {
+			for (String databaseType : _getDBTypes()) {
 				System.out.print(databaseType + " ");
 			}
 
 			System.out.println("]");
 
-			System.out.println("Please enter your database (mysql): ");
+			System.out.println("Please enter your database (postgresql): ");
 
 			response = _consoleReader.readLine();
 
 			if (response.isEmpty()) {
-				response = "mysql";
+				response = "postgresql";
 			}
 
 			dataSource = Database.getDatabase(response);
@@ -697,35 +1096,18 @@ public class DBUpgradeClient {
 			dataSource.setProtocol(response);
 		}
 
-		System.out.println(
-			"Please enter your database host (" + dataSource.getHost() + "): ");
+		String host = _requestHost(
+			dataSource.getHost(), "Please enter your database host");
 
-		response = _consoleReader.readLine();
-
-		if (!response.isEmpty()) {
-			dataSource.setHost(response);
+		if (host != null) {
+			dataSource.setHost(host);
 		}
 
-		String port = null;
+		Integer port = _requestPort(
+			dataSource.getPort(), "Please enter your database port");
 
-		if (dataSource.getPort() > 0) {
-			port = String.valueOf(dataSource.getPort());
-		}
-		else {
-			port = "none";
-		}
-
-		System.out.println("Please enter your database port (" + port + "): ");
-
-		response = _consoleReader.readLine();
-
-		if (!response.isEmpty()) {
-			if (response.equals("none")) {
-				dataSource.setPort(0);
-			}
-			else {
-				dataSource.setPort(Integer.parseInt(response));
-			}
+		if (port != null) {
+			dataSource.setPort(port);
 		}
 
 		System.out.println(
@@ -740,42 +1122,55 @@ public class DBUpgradeClient {
 
 		System.out.println("Please enter your database username: ");
 
-		String userName = _consoleReader.readLine();
+		userName = _consoleReader.readLine();
 
 		System.out.println("Please enter your database password: ");
 
-		String password = _consoleReader.readLine('*');
+		password = _consoleReader.readLine('*');
 
-		_portalUpgradeDatabaseProperties.setProperty(
+		_portalUpgradeExtProperties.setProperty(
 			"jdbc.default.driverClassName", dataSource.getClassName());
-		_portalUpgradeDatabaseProperties.setProperty(
+		_portalUpgradeExtProperties.setProperty(
 			"jdbc.default.password", password);
-		_portalUpgradeDatabaseProperties.setProperty(
+		_portalUpgradeExtProperties.setProperty(
 			"jdbc.default.url", dataSource.getURL());
-		_portalUpgradeDatabaseProperties.setProperty(
+		_portalUpgradeExtProperties.setProperty(
 			"jdbc.default.username", userName);
 	}
 
-	private void _verifyPortalUpgradeExtProperties() throws IOException {
+	private void _verifyPortalUpgradeExtPropertiesLiferayHome()
+		throws IOException {
+
 		String value = _portalUpgradeExtProperties.getProperty("liferay.home");
 
 		File baseDir = new File(".");
 
-		if ((value == null) || value.isEmpty()) {
+		if (_isEmpty(value)) {
 			File defaultLiferayHomeDir = new File(_jarDir, "../../");
 
-			System.out.println(
-				"Please enter your Liferay home (" +
-					defaultLiferayHomeDir.getCanonicalPath() + "): ");
+			String liferayHomeDirName = _requestDirName(
+				true, baseDir, defaultLiferayHomeDir.getCanonicalPath(),
+				"Please enter your Liferay home");
 
-			value = _consoleReader.readLine();
-
-			if (value.isEmpty()) {
+			if (liferayHomeDirName != null) {
+				value = liferayHomeDirName;
+			}
+			else {
 				value = defaultLiferayHomeDir.getCanonicalPath();
 			}
 		}
 		else {
 			baseDir = _jarDir;
+
+			if (!_verifyDirName(
+					true, baseDir, value,
+					_portalUpgradeExtPropertiesFile.getName(),
+					"liferay.home")) {
+
+				throw new IOException(
+					"Invalid configuration in " +
+						_portalUpgradeExtPropertiesFile.getName());
+			}
 		}
 
 		File liferayHome = new File(value);
@@ -792,8 +1187,12 @@ public class DBUpgradeClient {
 		"jboss", "tomcat", "weblogic", "wildfly"
 	};
 
-	private static final String[] _DATABASE_TYPES = {
+	private static final String[] _DATABASE_TYPES_DXP = {
 		"db2", "mariadb", "mysql", "oracle", "postgresql", "sqlserver"
+	};
+
+	private static final String[] _DATABASE_TYPES_PORTAL = {
+		"mariadb", "mysql", "postgresql"
 	};
 
 	private static final String _GOGO_SHELL_PREFIX = "g! ";
@@ -841,8 +1240,6 @@ public class DBUpgradeClient {
 	private final FileOutputStream _fileOutputStream;
 	private List<String> _jvmOpts = new ArrayList<>();
 	private final File _logFile;
-	private final Properties _portalUpgradeDatabaseProperties;
-	private final File _portalUpgradeDatabasePropertiesFile;
 	private final Properties _portalUpgradeExtProperties;
 	private final File _portalUpgradeExtPropertiesFile;
 	private final boolean _shell;
